--- a/blog/algorithm/leetcode/1779-找到最近的有相同x或y坐标的点.md
+++ b/blog/algorithm/leetcode/1779-找到最近的有相同x或y坐标的点.md
@@ -1,11 +1,12 @@
 ---
 title: "「1779. 找到最近的有相同 X 或 Y 坐标的点」题解"
 date: 2021-04-15
-tags: [LeetCode,Algorithm]
+tags: [LeetCode, Algorithm]
 categories: [📝 算法题解]
 ---
 
 # [1779. 找到最近的有相同 X 或 Y 坐标的点](https://leetcode-cn.com/problems/find-nearest-point-that-has-the-same-x-or-y-coordinate/)
+
 ## 题目描述
 
 给你两个整数 `x` 和 `y` ，表示你在一个笛卡尔坐标系下的 `(x, y)` 处。同时，在同一个坐标系下给你一个数组 `points` ，其中 `points[i] = [ai, bi]` 表示在 `(ai, bi)` 处有一个点。当一个点与你所在的位置有相同的 x 坐标或者相同的 y 坐标时，我们称这个点是 **有效的** 。
@@ -13,8 +14,6 @@ categories: [📝 算法题解]
 请返回距离你当前位置 **曼哈顿距离** 最近的 **有效** 点的下标（下标从 **0** 开始）。如果有多个最近的有效点，请返回下标 **最小** 的一个。如果没有有效点，请返回 `-1` 。
 
 两个点 `(x1, y1)` 和 `(x2, y2)` 之间的 **曼哈顿距离** 为 `abs(x1 - x2) + abs(y1 - y2)` 。<!-- more -->
-
- 
 
 **示例 1：**
 
@@ -40,8 +39,6 @@ categories: [📝 算法题解]
 解释：没有有效点。
 ```
 
- 
-
 **提示：**
 
 - `1 <= points.length <= 104`
@@ -50,8 +47,8 @@ categories: [📝 算法题解]
 
 **相关信息**：
 
-+ 难度：简单
-+ 标签：数组
+- 难度：简单
+- 标签：数组
 
 ## 题解
 
@@ -61,7 +58,7 @@ categories: [📝 算法题解]
 2. 计算曼哈顿距离并判断大小
 3. 曼哈顿距离相同时，取下标最小值
 
-前面两个条件是很好处理的，只是其中第三个条件值得考虑是否需要单独处理？我认为在满足特定情况下，并不一定需要单独处理，比如在循环时，保证从头到尾以此进行，那index也是从小到大有序的，此时不必单独处理。
+前面两个条件是很好处理的，只是其中第三个条件值得考虑是否需要单独处理？我认为在满足特定情况下，并不一定需要单独处理，比如在循环时，保证从头到尾以此进行，那 index 也是从小到大有序的，此时不必单独处理。
 
 通过查看本题题解发现，目前本题普遍的解法都是循环，只是在判断上诉三个条件时的处理方式不一样。
 
@@ -72,45 +69,48 @@ categories: [📝 算法题解]
 执行用时: 140 ms
 内存消耗: 45.6 MB
 */
-var nearestValidPoint = function(x, y, points) {
-    let minIndex=-1;//最小下标
-    let minAbs=Infinity;//最小曼哈顿距离
-    for(let i=0;i<points.length;i++){
-        if(points[i][0]===x||points[i][1]===y){
-            let abs=Math.abs(points[i][0]-x)+Math.abs(points[i][1]-y);
-            //计算曼哈顿距离
-            if(abs<minAbs){
-              //这里不必再单独处理曼哈顿距离相同时的情况了
-                minAbs=abs;
-                minIndex=i;
-            }
-        }
-    };
-    return minIndex;
+var nearestValidPoint = function (x, y, points) {
+  let minIndex = -1; //最小下标
+  let minAbs = Infinity; //最小曼哈顿距离
+  for (let i = 0; i < points.length; i++) {
+    if (points[i][0] === x || points[i][1] === y) {
+      let abs = Math.abs(points[i][0] - x) + Math.abs(points[i][1] - y);
+      //计算曼哈顿距离
+      if (abs < minAbs) {
+        //这里不必再单独处理曼哈顿距离相同时的情况了
+        minAbs = abs;
+        minIndex = i;
+      }
+    }
+  }
+  return minIndex;
 };
 ```
 
-### 方法二：使用 Array.reduce()  
+### 方法二：使用 Array.reduce()
 
 ```javascript
 /*
 执行用时: 152 ms
 内存消耗: 45.1 MB
 */
-var nearestValidPoint = function(x, y, points) {
-    let out = points.reduce((pre,val,index)=>{
-        if(val[0]==x||val[1]==y){
-            //判断是否为有效点
-            let abs=Math.abs(x-val[0])+Math.abs(y-val[1]);
-            //计算曼哈顿距离
-            if(abs<pre[1]){
-                //此处不必再单独考虑距离相同时取下标较小值的问题，因为reduce遍历数组是从头向尾遍历的
-                pre=[index,abs]
-            }  
+var nearestValidPoint = function (x, y, points) {
+  let out = points.reduce(
+    (pre, val, index) => {
+      if (val[0] == x || val[1] == y) {
+        //判断是否为有效点
+        let abs = Math.abs(x - val[0]) + Math.abs(y - val[1]);
+        //计算曼哈顿距离
+        if (abs < pre[1]) {
+          //此处不必再单独考虑距离相同时取下标较小值的问题，因为reduce遍历数组是从头向尾遍历的
+          pre = [index, abs];
         }
-        return pre;//不管pre有没有修改，都得将最后的结果返回回去，以便进行下一轮时pre有值。
-    },[-1,Infinity])
-    return out[0];
+      }
+      return pre; //不管pre有没有修改，都得将最后的结果返回回去，以便进行下一轮时pre有值。
+    },
+    [-1, Infinity]
+  );
+  return out[0];
 };
 ```
 
@@ -121,18 +121,21 @@ var nearestValidPoint = function(x, y, points) {
 执行用时: 136 ms
 内存消耗: 45.7 MB
 */
-var nearestValidPoint = function(x, y, points) {
-    let out = points.reduce((pre,val,index)=>{
-        //将两种最小曼哈顿距离的有效点分开计算
-        if(val[0]===x&&Math.abs(val[1]-y)<pre[1]){
-            pre=[index,Math.abs(val[1]-y)] 
-        }
-        if(val[1]===y&&Math.abs(val[0]-x)<pre[1]){
-             pre=[index,Math.abs(val[0]-x)]
-        }
-        return pre;
-    },[-1,Infinity])
-    return out[0];
+var nearestValidPoint = function (x, y, points) {
+  let out = points.reduce(
+    (pre, val, index) => {
+      //将两种最小曼哈顿距离的有效点分开计算
+      if (val[0] === x && Math.abs(val[1] - y) < pre[1]) {
+        pre = [index, Math.abs(val[1] - y)];
+      }
+      if (val[1] === y && Math.abs(val[0] - x) < pre[1]) {
+        pre = [index, Math.abs(val[0] - x)];
+      }
+      return pre;
+    },
+    [-1, Infinity]
+  );
+  return out[0];
 };
 ```
 
