--- a/blog/algorithm/leetcode/1832-判断句子是否为全字母句.md
+++ b/blog/algorithm/leetcode/1832-判断句子是否为全字母句.md
@@ -1,7 +1,7 @@
 ---
 title: "「1832. 判断句子是否为全字母句」题解"
 date: 2021-04-24
-tags: [LeetCode,Algorithm]
+tags: [LeetCode, Algorithm]
 categories: [📝 算法题解]
 ---
 
@@ -37,8 +37,8 @@ categories: [📝 算法题解]
 
 **相关信息**：
 
-+ 难度：简单
-+ 标签：字符串
+- 难度：简单
+- 标签：字符串
 
 ## 题解
 
@@ -46,10 +46,10 @@ categories: [📝 算法题解]
 
 这道题目主要的实现思路主要有两种：
 
-1. 遍历26个字母，判断其全都在 sentence 中。
-2. 遍历 sentence 所有字符，判断其是否包含全部26个字母。
+1. 遍历 26 个字母，判断其全都在 sentence 中。
+2. 遍历 sentence 所有字符，判断其是否包含全部 26 个字母。
 
-由于 sentence 的长度是不定的，其范围在1到1000以内，所以我跟倾向于选择第一种思路来实现，这样可以减少遍历消耗。
+由于 sentence 的长度是不定的，其范围在 1 到 1000 以内，所以我跟倾向于选择第一种思路来实现，这样可以减少遍历消耗。
 
 ### 方法一：ASCII 码+简单循环
 
@@ -60,17 +60,17 @@ categories: [📝 算法题解]
  * @param {string} sentence
  * @return {boolean}
  */
-var checkIfPangram = function(sentence) {
-    if(sentence.length<26)return false;
+var checkIfPangram = function (sentence) {
+  if (sentence.length < 26) return false;
   //长度小于26，必然不是。
-    let isHave;
-    for(let i=97;i<123;i++){
-        isHave=sentence.indexOf(String.fromCharCode(i));
-      //String.indexOf() 查找是否含有子串，成功返回子串开头的下标，失败返回-1
-      //String.fromCharCode() 将 ASCII 码值转换为对应的码值。
-        if(isHave==-1)return false;
-    }
-    return true;
+  let isHave;
+  for (let i = 97; i < 123; i++) {
+    isHave = sentence.indexOf(String.fromCharCode(i));
+    //String.indexOf() 查找是否含有子串，成功返回子串开头的下标，失败返回-1
+    //String.fromCharCode() 将 ASCII 码值转换为对应的码值。
+    if (isHave == -1) return false;
+  }
+  return true;
 };
 ```
 
@@ -78,30 +78,33 @@ var checkIfPangram = function(sentence) {
 
 下面还有许多奇妙的方法，都是从各种大佬的题解中学习到的一些方法，在此做个总结。我会贴出原代码以及写出我觉得可优化的提议并贴出优化后的代码：
 
-### 方法二：转化为数组，并使用filter()去重
+### 方法二：转化为数组，并使用 filter()去重
 
 ```javascript
 //原代码来自：https://leetcode-cn.com/problems/check-if-the-sentence-is-pangram/solution/js-by-mei-mei-xiang-xue-cyu-yan-a2me/
-var checkIfPangram = function(sentence) {
-    return (sentence.split('').filter(function(item, index, arr){
-        return arr.indexOf(item) === index;
-    }).length)==26?true:false;    
+var checkIfPangram = function (sentence) {
+  return sentence.split("").filter(function (item, index, arr) {
+    return arr.indexOf(item) === index;
+  }).length == 26
+    ? true
+    : false;
 };
-
 ```
 
-这段代码首先使用 split() 方法将sentence转化为了字符数组，然后使用了filter() 来过滤重复字符，实现判断重复的最关键的是使用 indexOf() 方法，因为 indexOf() 始终返回的是从头至尾首次出现的元素的下标或者-1，倘若字符的下标和indexOf() 不符合，证明其不是首次出现。
+这段代码首先使用 split() 方法将 sentence 转化为了字符数组，然后使用了 filter() 来过滤重复字符，实现判断重复的最关键的是使用 indexOf() 方法，因为 indexOf() 始终返回的是从头至尾首次出现的元素的下标或者-1，倘若字符的下标和 indexOf() 不符合，证明其不是首次出现。
 
 这段代码，看代码形式是想写成一行代码解决的样子，但是其中有些写法稍微有点儿繁杂，主要有两点：
 
-1. filter的回调函数可以写成箭头函数形式，更简洁
+1. filter 的回调函数可以写成箭头函数形式，更简洁
 2. 最后的三元表达式没必要写，==返回值与所写的值是一样的。
 
 ```javascript
 //优化后的代码
 var checkIfPangram = function (sentence) {
-    return sentence.split('').filter((item, index, arr) => arr.indexOf(item) === index).length === 26
-
+  return (
+    sentence.split("").filter((item, index, arr) => arr.indexOf(item) === index)
+      .length === 26
+  );
 };
 ```
 
@@ -111,12 +114,12 @@ var checkIfPangram = function (sentence) {
 
 ```javascript
 //原代码来自：https://leetcode-cn.com/problems/check-if-the-sentence-is-pangram/solution/js-qu-zhong-pai-xu-by-jingguangyan-yrjm/
-var checkIfPangram = function(sentence) {
-    if (sentence.length < 26) return false
-    let arr = Array.from(new Set(sentence))
-    arr.sort()
+var checkIfPangram = function (sentence) {
+  if (sentence.length < 26) return false;
+  let arr = Array.from(new Set(sentence));
+  arr.sort();
 
-    return arr.join('') === 'abcdefghijklmnopqrstuvwxyz'
+  return arr.join("") === "abcdefghijklmnopqrstuvwxyz";
 };
 ```
 
@@ -126,32 +129,32 @@ var checkIfPangram = function(sentence) {
 
 ```javascript
 //原代码来自：https://leetcode-cn.com/problems/check-if-the-sentence-is-pangram/solution/pan-duan-ju-zi-shi-fou-wei-quan-zi-mu-ju-pjrf/
-var checkIfPangram = function(sentence) {
-    var newSet = new Set();
+var checkIfPangram = function (sentence) {
+  var newSet = new Set();
 
-    for(var i = 0 ; i < sentence.length ; i++){
-        newSet.add(sentence[i])
-    }
+  for (var i = 0; i < sentence.length; i++) {
+    newSet.add(sentence[i]);
+  }
 
-    if(newSet.size==26){
-        return true
-    }else{
-        return false
-    }
+  if (newSet.size == 26) {
+    return true;
+  } else {
+    return false;
+  }
 };
 ```
 
-这段代码是先新建了一个 Set 对象 newSet，然后使用了一个 for 循环将每个字符添加到 newSet  中。最后判断长度是否等于26。
+这段代码是先新建了一个 Set 对象 newSet，然后使用了一个 for 循环将每个字符添加到 newSet 中。最后判断长度是否等于 26。
 
 这段代码很简洁，很容易让人理解，不过还有两点可以优化的：
 
 1. 不必使用 for 循环，new Set() 可以直接传入一段字符串哒。当传入一段字符串时，它可以自动根据字符去重，且区分大小写，更详细的用法请参考[MDN](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Set#string_%E7%9B%B8%E5%85%B3)
-2.  最后这个if语句写得有些复杂了，完全可以用一个return语句替代
+2. 最后这个 if 语句写得有些复杂了，完全可以用一个 return 语句替代
 
 ```javascript
 var checkIfPangram = function (sentence) {
-    var newSet = new Set(sentence);
-    return newSet.size === 26;
+  var newSet = new Set(sentence);
+  return newSet.size === 26;
 };
 ```
 
@@ -159,7 +162,7 @@ var checkIfPangram = function (sentence) {
 
 ```javascript
 var checkIfPangram = function (sentence) {
-    return new Set(sentence).size === 26;
+  return new Set(sentence).size === 26;
 };
 ```
 
@@ -169,18 +172,19 @@ var checkIfPangram = function (sentence) {
 
 ```javascript
 //原代码来自：https://leetcode-cn.com/problems/check-if-the-sentence-is-pangram/solution/li-yong-mapqu-zhong-bing-jian-zhi-by-qyu-3dy1/
-var checkIfPangram = function(sentence) {
-    let map = new Map(), len = sentence.length;
-    for(let i = 0; i < len; i++) {
-        map.set(sentence[i]);
-      //这里利用了map对象的key值不可重复的特性来达到去重的目的
-        if(map.size === 26) return true;
-    }
-    return false;
+var checkIfPangram = function (sentence) {
+  let map = new Map(),
+    len = sentence.length;
+  for (let i = 0; i < len; i++) {
+    map.set(sentence[i]);
+    //这里利用了map对象的key值不可重复的特性来达到去重的目的
+    if (map.size === 26) return true;
+  }
+  return false;
 };
 ```
 
-很惊奇吧？觉得自己学了一个假的JS？我也是第一次看到这样的用法，日常中去重使用 Set 还是较多的，第一次看见有人使用 map 的 key 值不可重复的特性来达到去重的目的。这很极客～
+很惊奇吧？觉得自己学了一个假的 JS？我也是第一次看到这样的用法，日常中去重使用 Set 还是较多的，第一次看见有人使用 map 的 key 值不可重复的特性来达到去重的目的。这很极客～
 
 但是我还是不太推荐这样的用法，毕竟这样的用法可读性较差，如果不是对 Map 所有属性极其了解，很难读懂这段代码，而且它的用法确实也不够规范。
 
@@ -188,19 +192,19 @@ var checkIfPangram = function(sentence) {
 
 ```javascript
 var checkIfPangram = function (sentence) {
-    let newMap = new Map();
-    for (let item of sentence) {
-        if (!newMap.get(item)) {
-            newMap.set(item, 1)
-          //这个if的位置是个小细节
-            if (newMap.size === 26) return true;
-        }
+  let newMap = new Map();
+  for (let item of sentence) {
+    if (!newMap.get(item)) {
+      newMap.set(item, 1);
+      //这个if的位置是个小细节
+      if (newMap.size === 26) return true;
     }
-    return false;
+  }
+  return false;
 };
 ```
 
-上边代码中返回 true 的 if 判断是一个小细节，其实这个 if 不是一定要放在另一个 if 里面的，只是放在里面可以减少执行它的次数。因为 newMap.size 的值的改变都是在执行的set操作之后，这时候判断size值是最合适的，如果将其放在另一个 if 外，则每次循环都会进行判断，及时size值没有改变也会重复判断，这样就多余了。
+上边代码中返回 true 的 if 判断是一个小细节，其实这个 if 不是一定要放在另一个 if 里面的，只是放在里面可以减少执行它的次数。因为 newMap.size 的值的改变都是在执行的 set 操作之后，这时候判断 size 值是最合适的，如果将其放在另一个 if 外，则每次循环都会进行判断，及时 size 值没有改变也会重复判断，这样就多余了。
 
 以上就是本题的所有题解啦，感谢你能看到这里，如果本文对你有所帮助的话，别忘了给一个 Star 嗷～
 如果你对题解中的代码有不一样的优化意见，也欢迎你在 issue 中指出～
@@ -208,11 +212,11 @@ var checkIfPangram = function (sentence) {
 
 ### 参考：
 
-+ [判断句子是否为全字母句](https://leetcode-cn.com/problems/check-if-the-sentence-is-pangram/solution/pan-duan-ju-zi-shi-fou-wei-quan-zi-mu-ju-pjrf/)
-+ [利用Map去重并剪枝](https://leetcode-cn.com/problems/check-if-the-sentence-is-pangram/solution/li-yong-mapqu-zhong-bing-jian-zhi-by-qyu-3dy1/)
-+ [JS](https://leetcode-cn.com/problems/check-if-the-sentence-is-pangram/solution/js-by-mei-mei-xiang-xue-cyu-yan-a2me/)
-+ [leet-code 第 237 周-单周赛赛后总结](https://leetcode-cn.com/problems/check-if-the-sentence-is-pangram/solution/leet-code-di-237-zhou-dan-zhou-sai-sai-h-1ou1/)
-+ [JS 去重排序](https://leetcode-cn.com/problems/check-if-the-sentence-is-pangram/solution/js-qu-zhong-pai-xu-by-jingguangyan-yrjm/)
+- [判断句子是否为全字母句](https://leetcode-cn.com/problems/check-if-the-sentence-is-pangram/solution/pan-duan-ju-zi-shi-fou-wei-quan-zi-mu-ju-pjrf/)
+- [利用 Map 去重并剪枝](https://leetcode-cn.com/problems/check-if-the-sentence-is-pangram/solution/li-yong-mapqu-zhong-bing-jian-zhi-by-qyu-3dy1/)
+- [JS](https://leetcode-cn.com/problems/check-if-the-sentence-is-pangram/solution/js-by-mei-mei-xiang-xue-cyu-yan-a2me/)
+- [leet-code 第 237 周-单周赛赛后总结](https://leetcode-cn.com/problems/check-if-the-sentence-is-pangram/solution/leet-code-di-237-zhou-dan-zhou-sai-sai-h-1ou1/)
+- [JS 去重排序](https://leetcode-cn.com/problems/check-if-the-sentence-is-pangram/solution/js-qu-zhong-pai-xu-by-jingguangyan-yrjm/)
 
 ## 全部代码
 
