--- a/blog/algorithm/leetcode/1833-雪糕的最大数量.md
+++ b/blog/algorithm/leetcode/1833-雪糕的最大数量.md
@@ -1,10 +1,12 @@
 ---
 title: "「1833. 雪糕的最大数量」题解"
 date: 2021-04-23
-tags: [LeetCode,Algorithm]
+tags: [LeetCode, Algorithm]
 categories: [📝 算法题解]
 ---
-#  [1833. 雪糕的最大数量](https://leetcode-cn.com/problems/maximum-ice-cream-bars/)
+
+# [1833. 雪糕的最大数量](https://leetcode-cn.com/problems/maximum-ice-cream-bars/)
+
 ## 题目描述
 
 夏日炎炎，小男孩 Tony 想买一些雪糕消消暑。
@@ -48,8 +50,8 @@ categories: [📝 算法题解]
 
 **相关信息**：
 
-+ 难度：中等
-+ 标签：排序数组
+- 难度：中等
+- 标签：排序数组
 
 ## 题解
 
@@ -59,15 +61,15 @@ categories: [📝 算法题解]
 
 ```javascript
 var maxIceCream = function (costs, coins) {
-    costs.sort((a, b) => a - b);
-    let count = costs.reduce((pre, val) => {
-        if (coins >= val) {
-            coins -= val
-            pre++;//pre 记录购买数量
-        }
-        return pre;
-    }, 0)
-    return count;
+  costs.sort((a, b) => a - b);
+  let count = costs.reduce((pre, val) => {
+    if (coins >= val) {
+      coins -= val;
+      pre++; //pre 记录购买数量
+    }
+    return pre;
+  }, 0);
+  return count;
 };
 ```
 
@@ -75,18 +77,18 @@ var maxIceCream = function (costs, coins) {
 
 ```javascript
 var maxIceCream = function (costs, coins) {
-    //贪心算法
-    costs.sort((a, b) => a - b);
-    let count = 0;
-    for (let i = 0; i < costs.length; i++) {
-        if (coins >= costs[i]) {
-            coins -= costs[i]
-            count++
-        } else { 
-          break;//跳出循环
-        }
+  //贪心算法
+  costs.sort((a, b) => a - b);
+  let count = 0;
+  for (let i = 0; i < costs.length; i++) {
+    if (coins >= costs[i]) {
+      coins -= costs[i];
+      count++;
+    } else {
+      break; //跳出循环
     }
-    return count
+  }
+  return count;
 };
 ```
 
