--- a/blog/algorithm/leetcode/53-最大子序和.md
+++ b/blog/algorithm/leetcode/53-最大子序和.md
@@ -1,10 +1,12 @@
 ---
 title: "「53. 最大子序和」题解"
 date: 2021-04-19
-tags: [LeetCode,Algorithm]
+tags: [LeetCode, Algorithm]
 categories: [📝 算法题解]
 ---
+
 # [53. 最大子序和](https://leetcode-cn.com/problems/maximum-subarray/)
+
 ## 题目描述
 
 给定一个整数数组 `nums` ，找到一个具有最大和的连续子数组（子数组最少包含一个元素），返回其最大和。 <!-- more -->
@@ -54,8 +56,8 @@ categories: [📝 算法题解]
 
 **相关信息**：
 
-+ 难度：简单
-+ 标签：数组、分治、动态规划
+- 难度：简单
+- 标签：数组、分治、动态规划
 
 ## 题解
 
@@ -66,37 +68,37 @@ categories: [📝 算法题解]
 在[《详细解读动态规划的实现, 易理解》](https://leetcode-cn.com/problems/maximum-subarray/solution/xiang-xi-jie-du-dong-tai-gui-hua-de-shi-xian-yi-li/) 一文中总结的三种遍历方式：
 
 1. 以某个节点开头的所有子序列：如：[a]、[a,b]等以 a 开头的子序列，这种方式常用于暴力解法。
-2. 根据子序列的长度为基础：如先遍历出子序列长度为 1 的子序列，再遍历出长度为2的等等。
+2. 根据子序列的长度为基础：如先遍历出子序列长度为 1 的子序列，再遍历出长度为 2 的等等。
 3. 以某个节点结尾的所有子序列：如：[b]、[a,b]等以 b 结尾的子序列，**这种方式可以产生递推关系**，常用于动态规划中。
 
 下面就从暴力枚举开始一步步优化代码：
 
 ### 方法一：暴力枚举
 
-#### 暴力出不了奇迹(超出时间限制🚫)
+#### 暴力出不了奇迹(超出时间限制 🚫)
 
-我们可以采用上文中提到的第一种遍历方式，使用首尾指针，分别指向子序列的首尾，再依次移动他们达到循环所有子序列的目的，同时再使用一个for循环计算首尾指针之间元素的和。故此需要三个for循环，故时间复杂度达到了O(n3)级别，必然会超出时间限制。
+我们可以采用上文中提到的第一种遍历方式，使用首尾指针，分别指向子序列的首尾，再依次移动他们达到循环所有子序列的目的，同时再使用一个 for 循环计算首尾指针之间元素的和。故此需要三个 for 循环，故时间复杂度达到了 O(n3)级别，必然会超出时间限制。
 
 ```javascript
 var maxSubArray = function (nums) {
-    //暴力循环
-    let max = -Infinity;
-    for (let start = 0; start < nums.length; start++) {
-        for (let end = start; end < nums.length; end++) {
-            let sum = 0;
-            for (let i = start; i <= end; i++) {
-                sum += nums[i]
-            }
-            max = max > sum ? max : sum;
-        }
+  //暴力循环
+  let max = -Infinity;
+  for (let start = 0; start < nums.length; start++) {
+    for (let end = start; end < nums.length; end++) {
+      let sum = 0;
+      for (let i = start; i <= end; i++) {
+        sum += nums[i];
+      }
+      max = max > sum ? max : sum;
     }
-    return max
+  }
+  return max;
 };
 ```
 
 #### 前缀和+暴力
 
-上边这段代码每次在计算和的时候都是从子序列从头到尾进行计算，尽管前一个子序列与后一个子序列只有最后一个元素不同，也会再次把前面的相同元素重新计算一次，但是这样就产生了很多重复计算，我们可以将sum变量提到外层去，让它一直保持子序列前面的和，这样就能大大降低重复计算，使得时间复杂度可以将至O(n2)。而这便是所谓的前缀和：
+上边这段代码每次在计算和的时候都是从子序列从头到尾进行计算，尽管前一个子序列与后一个子序列只有最后一个元素不同，也会再次把前面的相同元素重新计算一次，但是这样就产生了很多重复计算，我们可以将 sum 变量提到外层去，让它一直保持子序列前面的和，这样就能大大降低重复计算，使得时间复杂度可以将至 O(n2)。而这便是所谓的前缀和：
 
 ```javascript
 /**
@@ -104,25 +106,25 @@ var maxSubArray = function (nums) {
 内存消耗：39.4 MB  >41.22%
 */
 var maxSubArray = function (nums) {
-    //前缀和+暴力循环
-    let max = -Infinity;
-    let sum;
-    for (let start = 0; start < nums.length; start++) {
-        sum = 0;//重置为0
-        for (let end = start; end < nums.length; end++) {
-            sum += nums[end]
-            max = max > sum ? max : sum;
-        }
+  //前缀和+暴力循环
+  let max = -Infinity;
+  let sum;
+  for (let start = 0; start < nums.length; start++) {
+    sum = 0; //重置为0
+    for (let end = start; end < nums.length; end++) {
+      sum += nums[end];
+      max = max > sum ? max : sum;
     }
-    return max
+  }
+  return max;
 };
 ```
 
 #### 优化前缀和+一次循环
 
-上边，我们使用了前缀和优化了纯暴力，但是我们细心地思考前缀和的计算过程，那你肯定会惊奇地发现，其实计算前缀和的过程中也有非常多的重复计算，比如外部循环的第一轮循环的子序列和第二轮循环的子序列，它们只是头部和尾部有所不同，中间的元素也是完全相同的，但还是会重新计算一次。那我们可以想办法优化这一部分的重复计算，使得时间复杂度降为O(n)。那我们可以改变和的计算方式，我们可以定义一个函数 S(i) ;它可以计算数组从 0 到 i（包括 0 和 i ） 位置的元素和，那么从 i 到 j （ j > i ）的和就等于 S( j ) - S(i)。
+上边，我们使用了前缀和优化了纯暴力，但是我们细心地思考前缀和的计算过程，那你肯定会惊奇地发现，其实计算前缀和的过程中也有非常多的重复计算，比如外部循环的第一轮循环的子序列和第二轮循环的子序列，它们只是头部和尾部有所不同，中间的元素也是完全相同的，但还是会重新计算一次。那我们可以想办法优化这一部分的重复计算，使得时间复杂度降为 O(n)。那我们可以改变和的计算方式，我们可以定义一个函数 S(i) ;它可以计算数组从 0 到 i（包括 0 和 i ） 位置的元素和，那么从 i 到 j （ j > i ）的和就等于 S( j ) - S(i)。
 
-进一步分析，因为我们要求的是子序列的最大和，那么在一次循环的过程中，我们只需要将当前位置的 S(i) 减去前面 i-1个位置中的最小值，就能得到以当前位置结尾的所有子序列和的最大值。所以我们并不需要维持所有位置的 S()，只需要一个 min 变量来记录所有位置中的 S() 的最小值就可以了。
+进一步分析，因为我们要求的是子序列的最大和，那么在一次循环的过程中，我们只需要将当前位置的 S(i) 减去前面 i-1 个位置中的最小值，就能得到以当前位置结尾的所有子序列和的最大值。所以我们并不需要维持所有位置的 S()，只需要一个 min 变量来记录所有位置中的 S() 的最小值就可以了。
 
 ```javascript
 /*
@@ -130,22 +132,22 @@ var maxSubArray = function (nums) {
 内存消耗: 39.1 MB
 */
 var maxSubArray = function (nums) {
-    //优化前缀和+一次循环
-    let max = nums[0];
-    let sum = 0;
-    let min = 0;
-    for (let start = 0; start < nums.length; start++) {
-        sum += nums[end]
-        max = max > (sum - min) ? max : (sum - min);
-        min = sum < min ? sum : min;
-    }
-    return max
+  //优化前缀和+一次循环
+  let max = nums[0];
+  let sum = 0;
+  let min = 0;
+  for (let start = 0; start < nums.length; start++) {
+    sum += nums[end];
+    max = max > sum - min ? max : sum - min;
+    min = sum < min ? sum : min;
+  }
+  return max;
 };
 ```
 
 ### 方法二：动态规划
 
-许多题解都说动态规划的难点在于找到状态转移方程，但是我对于这还没有入门动态规划的人来说，找到状态都是一件难事儿🌚 。
+许多题解都说动态规划的难点在于找到状态转移方程，但是我对于这还没有入门动态规划的人来说，找到状态都是一件难事儿 🌚 。
 
 在本题中的最佳子结构便是以每个位置为终点的最大子数列都是基于前一位置的最大子数列计算得出的。故其状态转移转移方程为：sum[i] = max(sum[i-1]+a[i],a[i])；这样说起来还是有些抽象，不过我也无法做到更好的解释了，可以结合下面的详细代码理解。
 
@@ -153,27 +155,27 @@ var maxSubArray = function (nums) {
 // Kadane算法扫描一次整个数列的所有数值，
 // 在每一个扫描点计算以该点数值为结束点的子数列的最大和（正数和）。
 // 该子数列由两部分组成：以前一个位置为结束点的最大子数列、该位置的数值。
-// 因为该算法用到了“最佳子结构”（以每个位置为终点的最大子数列都是基于其前一位置的最大子数列计算得出, 
+// 因为该算法用到了“最佳子结构”（以每个位置为终点的最大子数列都是基于其前一位置的最大子数列计算得出,
 // 该算法可看成动态规划的一个例子。
-// 状态转移方程：sum[i] = max{sum[i-1]+a[i],a[i]}   
+// 状态转移方程：sum[i] = max{sum[i-1]+a[i],a[i]}
 // 其中(sum[i]记录以a[i]为子序列末端的最大序子列连续和)
-function  maxSubArray2  ( nums ) {
-    if (!nums.length) {
-        return;
-    };
-    // 在每一个扫描点计算以该点数值为结束点的子数列的最大和（正数和）。
-    let max_ending_here = nums[0];
-    let max_so_far = nums[0];
+function maxSubArray2(nums) {
+  if (!nums.length) {
+    return;
+  }
+  // 在每一个扫描点计算以该点数值为结束点的子数列的最大和（正数和）。
+  let max_ending_here = nums[0];
+  let max_so_far = nums[0];
 
-    for (let i = 1; i < nums.length; i ++ ) {
-        // 以每个位置为终点的最大子数列 都是基于其前一位置的最大子数列计算得出,
+  for (let i = 1; i < nums.length; i++) {
+    // 以每个位置为终点的最大子数列 都是基于其前一位置的最大子数列计算得出,
 
-        max_ending_here = Math.max ( nums[i], max_ending_here + nums[i]);
-        max_so_far = Math.max ( max_so_far, max_ending_here);
-    };
+    max_ending_here = Math.max(nums[i], max_ending_here + nums[i]);
+    max_so_far = Math.max(max_so_far, max_ending_here);
+  }
 
-    return max_so_far;
-};
+  return max_so_far;
+}
 ```
 
 上面这段代码来自在[《详细解读动态规划的实现, 易理解》](https://leetcode-cn.com/problems/maximum-subarray/solution/xiang-xi-jie-du-dong-tai-gui-hua-de-shi-xian-yi-li/) ，不知道你在阅读完这一部分代码之后，有没有感觉这部分代码的逻辑和前面的优化前缀版本的代码逻辑非常相似，都是在保存以该点数值为结束的子序列的最大和，只是实现方式不同。
@@ -181,10 +183,15 @@ function  maxSubArray2  ( nums ) {
 在充分理解了上面的代码之后，我也通过一些 reduce() 方法将上边的代码写成了一行的模式，逻辑上是完全一样的，你可以尝试理解一下，但是我非常不推荐你写这样毫无可读性的代码。我写这样一行代码，主要是想尝试能否在每一道题中都写出一行代码的解决方案，仅个人喜好，不喜勿喷，感谢！
 
 ```javascript
-var maxSubArray = function(nums) {
-    return nums.reduce((pre,val)=>{let tempPre=Math.max(pre[0]+val,val);return[tempPre,Math.max(pre[1],tempPre)]},[0,nums[0]])[1]
+var maxSubArray = function (nums) {
+  return nums.reduce(
+    (pre, val) => {
+      let tempPre = Math.max(pre[0] + val, val);
+      return [tempPre, Math.max(pre[1], tempPre)];
+    },
+    [0, nums[0]]
+  )[1];
 };
-
 ```
 
 ### 方案三：分治法
@@ -194,15 +201,15 @@ var maxSubArray = function(nums) {
 在本题中应用分治算法的基本思路是：
 
 1. 将数组从中间分为两个部分。例如 `[1,2,3,4] `分为 `[1,2]` 和 `[3,4]`
-2. 通过递归计算，得到左右两部分的最大子序列和是lsum，rsum。
+2. 通过递归计算，得到左右两部分的最大子序列和是 lsum，rsum。
 3. 从数组中间开始向两边计算最大子序列和 cross
 4. 返回 max(lsum,corss,rsum)
 
-可能你会疑惑为什么会有第 3 步？因为分治法的关键是，最大子序列和只有可能出现在左子数组、右子数组或者是横跨左右子数组三种情况。前面第 2 步解决了出现在左/右子数组中的情况，而第3步解决了横跨左右子数组的情况。
+可能你会疑惑为什么会有第 3 步？因为分治法的关键是，最大子序列和只有可能出现在左子数组、右子数组或者是横跨左右子数组三种情况。前面第 2 步解决了出现在左/右子数组中的情况，而第 3 步解决了横跨左右子数组的情况。
 
 详细过程可以参考下图（来自官方图解）：
 
-![官方图解](https://pic.leetcode-cn.com/3aa2128a7ddcf1123454a6e5364792490c5edff62674f3cfd9c81cb7b5e8e522-file_1576478143567) 
+![官方图解](https://pic.leetcode-cn.com/3aa2128a7ddcf1123454a6e5364792490c5edff62674f3cfd9c81cb7b5e8e522-file_1576478143567)
 
 ```javascript
 // ac地址：https://leetcode-cn.com/problems/maximum-subarray/
@@ -216,25 +223,25 @@ var maxSubArray = function(nums) {
  * @return {number}
  */
 function crossSum(nums, left, right, mid) {
-    if (left === right) {
-        return nums[left];
-    }
+  if (left === right) {
+    return nums[left];
+  }
 
-    let leftMaxSum = Number.MIN_SAFE_INTEGER;
-    let leftSum = 0;
-    for (let i = mid; i >= left; --i) {
-        leftSum += nums[i];
-        leftMaxSum = Math.max(leftMaxSum, leftSum);
-    }
+  let leftMaxSum = Number.MIN_SAFE_INTEGER;
+  let leftSum = 0;
+  for (let i = mid; i >= left; --i) {
+    leftSum += nums[i];
+    leftMaxSum = Math.max(leftMaxSum, leftSum);
+  }
 
-    let rightMaxSum = Number.MIN_SAFE_INTEGER;
-    let rightSum = 0;
-    for (let i = mid + 1; i <= right; ++i) {
-        rightSum += nums[i];
-        rightMaxSum = Math.max(rightMaxSum, rightSum);
-    }
+  let rightMaxSum = Number.MIN_SAFE_INTEGER;
+  let rightSum = 0;
+  for (let i = mid + 1; i <= right; ++i) {
+    rightSum += nums[i];
+    rightMaxSum = Math.max(rightMaxSum, rightSum);
+  }
 
-    return leftMaxSum + rightMaxSum;
+  return leftMaxSum + rightMaxSum;
 }
 
 /**
@@ -244,24 +251,24 @@ function crossSum(nums, left, right, mid) {
  * @return {number}
  */
 function __maxSubArray(nums, left, right) {
-    if (left === right) {
-        return nums[left];
-    }
+  if (left === right) {
+    return nums[left];
+  }
 
-    const mid = Math.floor((left + right) / 2);
-    const lsum = __maxSubArray(nums, left, mid);
-    const rsum = __maxSubArray(nums, mid + 1, right);
-    const cross = crossSum(nums, left, right, mid);
+  const mid = Math.floor((left + right) / 2);
+  const lsum = __maxSubArray(nums, left, mid);
+  const rsum = __maxSubArray(nums, mid + 1, right);
+  const cross = crossSum(nums, left, right, mid);
 
-    return Math.max(lsum, rsum, cross);
+  return Math.max(lsum, rsum, cross);
 }
 
 /**
  * @param {number[]} nums
  * @return {number}
  */
-var maxSubArray = function(nums) {
-    return __maxSubArray(nums, 0, nums.length - 1);
+var maxSubArray = function (nums) {
+  return __maxSubArray(nums, 0, nums.length - 1);
 };
 ```
 
@@ -271,10 +278,10 @@ var maxSubArray = function(nums) {
 
 ### 参考
 
-+ [详细解读动态规划的实现, 易理解](https://leetcode-cn.com/problems/maximum-subarray/solution/xiang-xi-jie-du-dong-tai-gui-hua-de-shi-xian-yi-li/)
-+ [最大子序和](https://leetcode-cn.com/problems/maximum-subarray/solution/zui-da-zi-xu-he-by-leetcode-solution/)
-+ [【五种解法三种语言】（Java， JavaScript， Python）](https://leetcode-cn.com/problems/maximum-subarray/solution/wu-chong-jie-fa-san-chong-yu-yan-java-javascript-2/)
-+ [【超全·4种解法】动态规划及优化、贪心法、分治法（JavaScript实现）](https://leetcode-cn.com/problems/maximum-subarray/solution/chao-quan-4chong-jie-fa-dong-tai-gui-hua-ji-you-hu/)
+- [详细解读动态规划的实现, 易理解](https://leetcode-cn.com/problems/maximum-subarray/solution/xiang-xi-jie-du-dong-tai-gui-hua-de-shi-xian-yi-li/)
+- [最大子序和](https://leetcode-cn.com/problems/maximum-subarray/solution/zui-da-zi-xu-he-by-leetcode-solution/)
+- [【五种解法三种语言】（Java， JavaScript， Python）](https://leetcode-cn.com/problems/maximum-subarray/solution/wu-chong-jie-fa-san-chong-yu-yan-java-javascript-2/)
+- [【超全·4 种解法】动态规划及优化、贪心法、分治法（JavaScript 实现）](https://leetcode-cn.com/problems/maximum-subarray/solution/chao-quan-4chong-jie-fa-dong-tai-gui-hua-ji-you-hu/)
 
 本文部分内容参考了以上文章，感谢原作者的创作～
 
