--- a/blog/algorithm/leetcode/66-加一.md
+++ b/blog/algorithm/leetcode/66-加一.md
@@ -1,11 +1,12 @@
 ---
 title: "「66. 加一」题解"
 date: 2021-04-22
-tags: [LeetCode,Algorithm]
+tags: [LeetCode, Algorithm]
 categories: [📝 算法题解]
 ---
 
-#  66. 加一
+# 66. 加一
+
 ## 题目描述
 
 给定一个由 **整数** 组成的 **非空** 数组所表示的非负整数，在该数的基础上加一。
@@ -44,8 +45,8 @@ categories: [📝 算法题解]
 
 **相关信息**：
 
-+ 难度：简单
-+ 标签：数组
+- 难度：简单
+- 标签：数组
 
 ## 题解
 
@@ -59,19 +60,19 @@ categories: [📝 算法题解]
  * @return {number[]}
  */
 //不能AC
-var plusOne = function(digits) {
-  let num=Number(digits.join(""));
+var plusOne = function (digits) {
+  let num = Number(digits.join(""));
   num++;
   return num.toString().solit("");
-   //等价于 return (1+Number(digits.join(''))).toString().split('')
+  //等价于 return (1+Number(digits.join(''))).toString().split('')
 };
 ```
 
-很不幸的是，这个版本的代码不能AC，因为测试用例中有数据超过了Number所能表示的最大值，溢出了。但这就完了吗？不，既然思路没有问题，而是数据类型溢出了，那我们就改变数据类型吧。在 ES10 中，增加了一种基本数据类型 `BigInt`，它的数据范围更大。所以我们可以使用它来优化上面的代码。
+很不幸的是，这个版本的代码不能 AC，因为测试用例中有数据超过了 Number 所能表示的最大值，溢出了。但这就完了吗？不，既然思路没有问题，而是数据类型溢出了，那我们就改变数据类型吧。在 ES10 中，增加了一种基本数据类型 `BigInt`，它的数据范围更大。所以我们可以使用它来优化上面的代码。
 
 ```javascript
-var plusOne = function(digits) {
-  let num=BigInt(digits.join(""))+1n;
+var plusOne = function (digits) {
+  let num = BigInt(digits.join("")) + 1n;
   //1 默认是number类型，加上n缀代表BigInt类型。
   return num.toString().solit("");
 };
@@ -79,8 +80,8 @@ var plusOne = function(digits) {
 
 ```javascript
 var plusOne = function (digits) {
-    //使用 bigint 解决溢出问题
-    return (BigInt(digits.join("")) + 1n).toString().split('');
+  //使用 bigint 解决溢出问题
+  return (BigInt(digits.join("")) + 1n).toString().split("");
   //一行代码解决
 };
 ```
@@ -98,22 +99,23 @@ var plusOne = function (digits) {
 1. 是否产生进位？
 2. 产生进位后是否导致高位+1？
 
-那么要解决这两个问题就需要分别处理它们，关于一直进位，可以使用 for 循环，同时需要判断中途是否进位停止；关于进位后导致高位+1的情况，可以新建数组，或者从数组头部压入一位数。
+那么要解决这两个问题就需要分别处理它们，关于一直进位，可以使用 for 循环，同时需要判断中途是否进位停止；关于进位后导致高位+1 的情况，可以新建数组，或者从数组头部压入一位数。
 
 ```javascript
-var plusOne = function(digits) {
+var plusOne = function (digits) {
   for (let i = digits.length - 1; i >= 0; i--) {
     digits[i]++;
     digits[i] %= 10;
-    if (digits[i] !== 0) {//判断进位是否停止
+    if (digits[i] !== 0) {
+      //判断进位是否停止
       return digits;
     }
   }
-  let arr = new Array(digits.length + 1);//新建数组
+  let arr = new Array(digits.length + 1); //新建数组
   for (let i = 1; i < digits.length + 1; i++) {
-    arr[i] = 0;//数组填充0
+    arr[i] = 0; //数组填充0
   }
-  arr[0] = 1;//最高位置1
+  arr[0] = 1; //最高位置1
   return arr;
 };
 ```
@@ -122,24 +124,24 @@ var plusOne = function(digits) {
 
 ```javascript
 var plusOne = function (digits) {
-    //数组遍历+新建数组
-    const len = digits.length;
-    for (let i = len - 1; i >= 0; i--) {
-        digits[i]++;
-        digits[i] %= 10;
-        if (digits[i] != 0)
-            //判断进位是否停止
-            return digits;
-    }
-    //长度改变时新建数组并填充0
-    digits = new Array(len + 1).fill(0);
-    digits[0] = 1;
-    return digits
+  //数组遍历+新建数组
+  const len = digits.length;
+  for (let i = len - 1; i >= 0; i--) {
+    digits[i]++;
+    digits[i] %= 10;
+    if (digits[i] != 0)
+      //判断进位是否停止
+      return digits;
+  }
+  //长度改变时新建数组并填充0
+  digits = new Array(len + 1).fill(0);
+  digits[0] = 1;
+  return digits;
 };
 ```
 
 ```javascript
-var plusOne = function(digits) {
+var plusOne = function (digits) {
   for (let i = digits.length - 1; i >= 0; i--) {
     digits[i]++;
     digits[i] %= 10;
@@ -160,10 +162,10 @@ var plusOne = function(digits) {
 
 ### 参考
 
-+ [画解算法：66. 加一](https://leetcode-cn.com/problems/plus-one/solution/hua-jie-suan-fa-66-jia-yi-by-guanpengchn/)
-+ [【数组】加一](https://leetcode-cn.com/problems/plus-one/solution/shu-zu-jia-yi-by-demigodliu-m2c6/)
-+ [JavaScript：超便捷，利用ES10基本类型BigInt来解题](https://leetcode-cn.com/problems/plus-one/solution/javascriptchao-bian-jie-li-yong-es10ji-ben-lei-xin/)
-+ [18 - 加一](https://leetcode-cn.com/problems/plus-one/solution/18-jia-yi-by-joeyzhouyicheng/)
+- [画解算法：66. 加一](https://leetcode-cn.com/problems/plus-one/solution/hua-jie-suan-fa-66-jia-yi-by-guanpengchn/)
+- [【数组】加一](https://leetcode-cn.com/problems/plus-one/solution/shu-zu-jia-yi-by-demigodliu-m2c6/)
+- [JavaScript：超便捷，利用 ES10 基本类型 BigInt 来解题](https://leetcode-cn.com/problems/plus-one/solution/javascriptchao-bian-jie-li-yong-es10ji-ben-lei-xin/)
+- [18 - 加一](https://leetcode-cn.com/problems/plus-one/solution/18-jia-yi-by-joeyzhouyicheng/)
 
 ## 全部代码
 
