--- a/blog/articles/40-常见的社会工程攻击策略.md
+++ b/blog/articles/40-常见的社会工程攻击策略.md
@@ -12,6 +12,7 @@ categories: [🌏 翻译校对]
 这些网络犯罪分子试图以某种方式访问这些数据并利用它们为自己谋取利益。这些形式千变万化，从勒索到使用数据制造混乱。
 
 网络犯罪分子利用多种方法来给公司和个人制造问题，其中一种方法被称为社会工程。让我们来看看这是什么。
+
 <!-- more -->
 
 ## 什么是社会工程？
@@ -153,27 +154,28 @@ categories: [🌏 翻译校对]
 
 ## 作为个人，我该如何保持安全？
 
-* 不要打开可疑来源的电子邮件和附件。请务必检查发件人的电子邮件地址，即使是来自受信任发件人的电子邮件地址也可能存在诈骗。
-* 使用多因素身份验证（MFA）。攻击者对你的登录凭据非常感兴趣。但是，如果你使用多因素身份验证，攻击者将无法单独使用你的凭据执行任何操作。
-* 小心那些“好得令人难以置信”的优惠。如果优惠听起来好得令人难以置信，请在谷歌上搜索有关信息，以了解它是否合法。
-* 确保你的防毒软件保持最新的状态。
-* 不使用设备时，请始终将它锁定。
-* 与人交谈时始终保持谨慎。说话前请三思，你可能会无意中说出一些可能属于机密的内容。
+- 不要打开可疑来源的电子邮件和附件。请务必检查发件人的电子邮件地址，即使是来自受信任发件人的电子邮件地址也可能存在诈骗。
+- 使用多因素身份验证（MFA）。攻击者对你的登录凭据非常感兴趣。但是，如果你使用多因素身份验证，攻击者将无法单独使用你的凭据执行任何操作。
+- 小心那些“好得令人难以置信”的优惠。如果优惠听起来好得令人难以置信，请在谷歌上搜索有关信息，以了解它是否合法。
+- 确保你的防毒软件保持最新的状态。
+- 不使用设备时，请始终将它锁定。
+- 与人交谈时始终保持谨慎。说话前请三思，你可能会无意中说出一些可能属于机密的内容。
 
 ## 作为一个公司/组织，我该如何保持安全？
 
 根据 Dan Lohrmann（Security Mentor 的首席安全官）的说法，
 
-* 专注于培训你的员工，尤其是新员工。确保你有一个全面的安全意识培训计划，并定期更新它们，以解决一般网络钓鱼威胁和新的且有针对性的网络威胁。请记住，攻击不仅仅发生于点击链接。
-* 定期举行“路演”简报会，解释最新的攻击趋势。 确保所有级别的员工都参加这些简报会，包括高级管理人员和对金融交易有权力的人。
-* 聘请外部独立安全团队来审核你公司的安全。这些审计应定期进行。
+- 专注于培训你的员工，尤其是新员工。确保你有一个全面的安全意识培训计划，并定期更新它们，以解决一般网络钓鱼威胁和新的且有针对性的网络威胁。请记住，攻击不仅仅发生于点击链接。
+- 定期举行“路演”简报会，解释最新的攻击趋势。 确保所有级别的员工都参加这些简报会，包括高级管理人员和对金融交易有权力的人。
+- 聘请外部独立安全团队来审核你公司的安全。这些审计应定期进行。
 
 我们必须保持适当的安全措施，以避免自己和公司陷入困境。正如我们在上面看到的，这些攻击的代价可能非常高。我们有责任保护自己不被潜伏在周围的邪恶眼睛所盯上。
 
 ---
- * 原文地址：[Common Social Engineering Attack Strategies](https://blog.bitsrc.io/common-social-engineering-attack-strategies-23357db3d2d5)
- * 原文作者：[Alicia Jones](https://medium.com/@alicia1990jones)
- * 译文出自：[掘金翻译计划](https://github.com/xitu/gold-miner)
- * 本文永久链接：[https://github.com/xitu/gold-miner/blob/master/article/2021/common-social-engineering-attack-strategies.md](https://github.com/xitu/gold-miner/blob/master/article/2021/common-social-engineering-attack-strategies.md)
- * 译者：[jaredliw](https://github.com/jardliw)
- * 校对者：[Kim Yang](https://github.com/KimYangOfCat)，[PingHGao](https://github.com/PingHGao)
+
+- 原文地址：[Common Social Engineering Attack Strategies](https://blog.bitsrc.io/common-social-engineering-attack-strategies-23357db3d2d5)
+- 原文作者：[Alicia Jones](https://medium.com/@alicia1990jones)
+- 译文出自：[掘金翻译计划](https://github.com/xitu/gold-miner)
+- 本文永久链接：[https://github.com/xitu/gold-miner/blob/master/article/2021/common-social-engineering-attack-strategies.md](https://github.com/xitu/gold-miner/blob/master/article/2021/common-social-engineering-attack-strategies.md)
+- 译者：[jaredliw](https://github.com/jardliw)
+- 校对者：[Kim Yang](https://github.com/KimYangOfCat)，[PingHGao](https://github.com/PingHGao)
