--- a/blog/articles/46-修订后的参与TC39标准委员会的模式.md
+++ b/blog/articles/46-修订后的参与TC39标准委员会的模式.md
@@ -1,16 +1,17 @@
 ---
 title: "修订后的参与 TC39 标准委员会的模式"
 date: 2021-06-07
-tags: [ECMA,前端]
+tags: [ECMA, 前端]
 categories: [🌏 翻译校对]
 ---
 
 ![](https://picbed.kimyang.cn/202109050852709.jpeg)
+
 <!-- more -->
 
-<small>*图片来自民族学局提交给史密森学会秘书的年度报告（1881）*</small>
+<small>_图片来自民族学局提交给史密森学会秘书的年度报告（1881）_</small>
 
-我最近重新阅读了 [艾伦·维尔福斯·布洛克](https://twitter.com/awbjs) 的论文 [编程语言的标准化和参与模式](http://pl.csie.ntut.edu.tw/asianplop2016/proceedings/A14.pdf)，同时为即将到来的讲座做准备。艾伦在编程语言标准开发、研究和文档方面有20多年的经验，这对 JavaScript 社区来说是非常有价值且不能被低估的。这篇论文为那些刚开始从事标准制定工作的人提供了学术性的指导方针和模式；为了使其更具有可操作性，并为我们的社区提供现代化的语言，我在下面更新了他的指导方针，以及一些改善大家参与标准委员会体验的有用建议。
+我最近重新阅读了 [艾伦·维尔福斯·布洛克](https://twitter.com/awbjs) 的论文 [编程语言的标准化和参与模式](http://pl.csie.ntut.edu.tw/asianplop2016/proceedings/A14.pdf)，同时为即将到来的讲座做准备。艾伦在编程语言标准开发、研究和文档方面有 20 多年的经验，这对 JavaScript 社区来说是非常有价值且不能被低估的。这篇论文为那些刚开始从事标准制定工作的人提供了学术性的指导方针和模式；为了使其更具有可操作性，并为我们的社区提供现代化的语言，我在下面更新了他的指导方针，以及一些改善大家参与标准委员会体验的有用建议。
 
 技术标准委员会的性质决定了用户、实施者和供应商都在挤在同一个房间里，他们的需求或利益往往是相互冲突的。[亚历克斯·罗素](https://twitter.com/slightlylate) 在他的 [有效的标准工作](https://infrequently.org/2018/06/effective-standards-work-part-1-the-lay-of-the-land/) 系列文章中对网络驱动的标准组织中的这些紧张关系做了很好的说明。重要的是我们要明白，最终大家都在努力做正确的事——挑战在于就什么是正确的事达成共识，并以一种包容和尊重的方式去执行。这些指导方针是关于鼓励社会活动，促进专业（和个人回报）的标准制定过程。
 
@@ -50,13 +51,14 @@ categories: [🌏 翻译校对]
 
 无论你是第一次参与标准制定并希望找到自己的立足点，还是你是现有的参与者并希望提高你目前工作的成功率，上述准则都适用。任何组织、委员会或运营联合开源软件项目的团队都可以直接从这些指南中受益，或者进行修改，使其更适合你的团队。我们的目标是快乐地制定标准!
 
-* <sup>1</sup>： 亚历克斯·罗素的 [穿针引线](https://infrequently.org/2018/06/effective-standards-work-part-2-threading-the-needle/)
-* <sup>2</sup>：大多数的定义因组织而异。它通常需要三分之二或更多的投票来通过一个问题。
+- <sup>1</sup>： 亚历克斯·罗素的 [穿针引线](https://infrequently.org/2018/06/effective-standards-work-part-2-threading-the-needle/)
+- <sup>2</sup>：大多数的定义因组织而异。它通常需要三分之二或更多的投票来通过一个问题。
 
 ---
- * 原文地址：[Revised Patterns for Participation in Standards Committees](https://medium.com/@jorydotcom/revised-patterns-for-participation-in-standards-committees-dae82d93954e)
- * 原文作者：[Jory Burson](https://medium.com/@jorydotcom)
- * 译文出自：[掘金翻译计划](https://github.com/xitu/gold-miner)
- * 本文永久链接：[https://github.com/xitu/gold-miner/blob/master/article/ECMA-TC39/Revised-Patterns-for-Participation-in-Standards-Committees.md](https://github.com/xitu/gold-miner/blob/master/article/ECMA-TC39/Revised-Patterns-for-Participation-in-Standards-Committees.md)
- * 译者：[洛竹](https://github.com/youngjuning)
- * 校对者：[KimYangOfCat](https://github.com/KimYangOfCat)，[qq1120637483](https://github.com/qq1120637483)
+
+- 原文地址：[Revised Patterns for Participation in Standards Committees](https://medium.com/@jorydotcom/revised-patterns-for-participation-in-standards-committees-dae82d93954e)
+- 原文作者：[Jory Burson](https://medium.com/@jorydotcom)
+- 译文出自：[掘金翻译计划](https://github.com/xitu/gold-miner)
+- 本文永久链接：[https://github.com/xitu/gold-miner/blob/master/article/ECMA-TC39/Revised-Patterns-for-Participation-in-Standards-Committees.md](https://github.com/xitu/gold-miner/blob/master/article/ECMA-TC39/Revised-Patterns-for-Participation-in-Standards-Committees.md)
+- 译者：[洛竹](https://github.com/youngjuning)
+- 校对者：[KimYangOfCat](https://github.com/KimYangOfCat)，[qq1120637483](https://github.com/qq1120637483)
