--- a/blog/articles/47-关于分布式追踪的事项.md
+++ b/blog/articles/47-关于分布式追踪的事项.md
@@ -13,14 +13,15 @@ publish: true
 这就是为什么你需要分布式追踪来覆盖你的团队结构和生态系统。它可以让你详细了解一个专项请求或被触发的业务流程的所有已执行代码，从而提供巨大的帮助。
 
 在本文中，我想向你介绍 OpenTracing API，W3C 的 Trace Context 规范，以及如何构建你自己的自定义集成，你可以将其用来为你选择的追踪工具创建和扩展追踪上下文。
+
 <!-- more -->
 
-* **论证** —— 为什么分布式追踪很重要
-* **OpenTracing API** —— 一个独立于供应商的框架
-* **概念** —— spans，范围和线程
-* **深入探索** —— 了解追踪父级 span 和追踪状态
-* **实践** —— 初始化追踪器，打开和关闭 spans
-* **主要收获**
+- **论证** —— 为什么分布式追踪很重要
+- **OpenTracing API** —— 一个独立于供应商的框架
+- **概念** —— spans，范围和线程
+- **深入探索** —— 了解追踪父级 span 和追踪状态
+- **实践** —— 初始化追踪器，打开和关闭 spans
+- **主要收获**
 
 ## 为什么分布式追踪是必不可少的？
 
@@ -32,9 +33,9 @@ publish: true
 
 通过查看 AWS 上一些虚构架构的示例，我们看到在不同的系统中有很多代码只是一个外部触发器。
 
-* 数据被写入了 DynamoDB，但更动通过 Streams 转发。
-* 消息被加入到 SQS 队列，稍后被另一个 Lambda 函数处理。
-* 外部服务被调用，进而产生下一步的传入请求。
+- 数据被写入了 DynamoDB，但更动通过 Streams 转发。
+- 消息被加入到 SQS 队列，稍后被另一个 Lambda 函数处理。
+- 外部服务被调用，进而产生下一步的传入请求。
 
 尽管操作似乎是解耦的，但它们通常与同一个触发器相关，因此从业务的角度来看是耦合的。你通常需要关联整个业务流程中包含的每个操作才能把问题解决。
 
@@ -70,10 +71,10 @@ publish: true
 
 `Spans` 是分布式追踪的基本概念。`Span` 表示特定的执行代码或工作量。看看 OpenTracing 的规范，它包含：
 
-* 操作的名称
-* 开始和结束的时间
-* 一组标签（用于查询）和日志（用于特定于跨度的消息）
-* 上下文
+- 操作的名称
+- 开始和结束的时间
+- 一组标签（用于查询）和日志（用于特定于跨度的消息）
+- 上下文
 
 这意味着，我们生态系统中涉及请求的每个组件都应至少贡献一个跨度。由于跨度可以引用其他跨度，我们可以利用这些跨度来建立一个完整的堆栈追踪，以覆盖单个请求中的所有操作。跨度的精细程度不限。我们可以在任何地方使用它，不论是整个复杂的流程，或是单个功能/操作的跨度。
 
@@ -89,8 +90,8 @@ publish: true
 
 在系统之间传输我们的上下文是由两个不同的 HTTP 标头实现的：`traceparent` 和 `tracestate`。它将包含如何关联所有相关 span 信息的全部信息。在 [W3C 的 Trace Context](https://www.w3.org/TR/trace-context/) 中有详细解说。
 
-* `traceparent` —— 指定对追踪系统的请求，不依赖于任何供应商。
-* `tracestate` —— 包括关于请求供应商特定的信息。
+- `traceparent` —— 指定对追踪系统的请求，不依赖于任何供应商。
+- `tracestate` —— 包括关于请求供应商特定的信息。
 
 ### 追踪父级 span
 
@@ -98,10 +99,10 @@ publish: true
 
 ![`traceparent` HTTP 标头的示例](https://picbed.kimyang.cn/202109050847543.png)
 
-* 版本 — 标识版本，当前为 `00`。
-* TraceID — 分布式追踪的唯一标识符。
-* ParentID — 调用者已知的请求标识符。
-* 追踪标志 — 用于指定采样或追踪级别等选项。
+- 版本 — 标识版本，当前为 `00`。
+- TraceID — 分布式追踪的唯一标识符。
+- ParentID — 调用者已知的请求标识符。
+- 追踪标志 — 用于指定采样或追踪级别等选项。
 
 追踪系统需要追踪父级 span 来关联我们的请求并将它们聚合成一个多 span 请求。
 
@@ -127,10 +128,10 @@ publish: true
 
 我们的示例非常简单，因此我们必须采取的基本步骤也相当简单：
 
-* 如果还没有跟踪，我们将初始化一个新的（根 span）
-* 我们可以在处理该请求或操作的每个系统上为每个进程边界（例如外部调用）创建一个新的 span
-* 我们将在完成后关闭我们打开的 span
-* 我们将 span 详细信息提交给我们的追踪收集器系统
+- 如果还没有跟踪，我们将初始化一个新的（根 span）
+- 我们可以在处理该请求或操作的每个系统上为每个进程边界（例如外部调用）创建一个新的 span
+- 我们将在完成后关闭我们打开的 span
+- 我们将 span 详细信息提交给我们的追踪收集器系统
 
 我们可以在单个系统中根据需要打开任意数量的 span。我们只需要确保我们正确嵌套它们并分别关闭它们。因此我们需要手动执行追踪 span 堆栈。
 
@@ -169,8 +170,8 @@ if (!traceParent) {
 
 我更喜欢使用有两个专用对象的请求上下文：
 
-* 一个保存跨度必要细节的对象：打开它时的时间戳和跨度的标识符
-* 一个保存 span 必要细节的对象：打开它时的时间戳和 span 的标识符
+- 一个保存跨度必要细节的对象：打开它时的时间戳和跨度的标识符
+- 一个保存 span 必要细节的对象：打开它时的时间戳和 span 的标识符
 
 ![](https://picbed.kimyang.cn/202109050847272.png)
 
@@ -188,9 +189,9 @@ const openNewSpan = (spanName) => {
 
 当我们需要关闭操作或进程结束的 span 时，我们可以从堆栈顶部弹出 span。我们还可以根据我们在 span 中保存的信息或堆栈中剩余的信息来计算所需的信息。
 
-* 我们父级 span 标识符 —— 这是现在在堆栈顶部的 span。
-* 当前的时间戳和我们在跨度保存的时间戳的差为操作的持续时间。
-* 追踪标识符 —— 保存在我们的根 span 中，它始终在堆栈的底部。
+- 我们父级 span 标识符 —— 这是现在在堆栈顶部的 span。
+- 当前的时间戳和我们在跨度保存的时间戳的差为操作的持续时间。
+- 追踪标识符 —— 保存在我们的根 span 中，它始终在堆栈的底部。
 
 在这个例子中，我们将跨度信息以他们自己的格式提交给 NewRelic。根据你使用的追踪工具，这可能会有所不同。
 
@@ -202,9 +203,9 @@ const closeSpan = (spanName) => {
   const parent = RequestContext.getSpan('root');
   const traceId = parent.traceId;
   const parentId = parent.spanId;
-  // set the trace parent of 
+  // set the trace parent of
   updateTraceParent();
-  submitTraceInformation(traceId, spanName, spanId, parentId, duration); 
+  submitTraceInformation(traceId, spanName, spanId, parentId, duration);
 }
 
 const updateTraceParent = () => {
@@ -244,10 +245,10 @@ const submitTraceInformation = (traceId, spanName, spanId, parentId, duration) =
   var config = {
     method: 'post',
     url: 'https://trace-api.newrelic.com/trace/v1',
-    headers: { 
-      'Api-Key': 'NRII-xc.........77m5P6O', 
-      'Content-Type': 'application/json', 
-      'Data-Format': 'newrelic', 
+    headers: {
+      'Api-Key': 'NRII-xc.........77m5P6O',
+      'Content-Type': 'application/json',
+      'Data-Format': 'newrelic',
       'Data-Format-Version': '1'
     },
     data
@@ -270,9 +271,10 @@ const submitTraceInformation = (traceId, spanName, spanId, parentId, duration) =
 感谢你的阅读。
 
 ---
- * 原文地址：[Distributed Tracing Matters](https://levelup.gitconnected.com/distributed-tracing-matters-aa003d5adab9)
- * 原文作者：[Tobias Schmidt](https://medium.com/@tpschmidt)
- * 译文出自：[掘金翻译计划](https://github.com/xitu/gold-miner)
- * 本文永久链接：[https://github.com/xitu/gold-miner/blob/master/article/2021/distributed-tracing-matters.md](https://github.com/xitu/gold-miner/blob/master/article/2021/distributed-tracing-matters.md)
- * 译者：[ItzMiracleOwO](https://github.com/itzmiracleowo)
- * 校对者：[jaredliw](https://github.com/jaredliw)、[KimYang](https://github.com/KimYangOfCat)
+
+- 原文地址：[Distributed Tracing Matters](https://levelup.gitconnected.com/distributed-tracing-matters-aa003d5adab9)
+- 原文作者：[Tobias Schmidt](https://medium.com/@tpschmidt)
+- 译文出自：[掘金翻译计划](https://github.com/xitu/gold-miner)
+- 本文永久链接：[https://github.com/xitu/gold-miner/blob/master/article/2021/distributed-tracing-matters.md](https://github.com/xitu/gold-miner/blob/master/article/2021/distributed-tracing-matters.md)
+- 译者：[ItzMiracleOwO](https://github.com/itzmiracleowo)
+- 校对者：[jaredliw](https://github.com/jaredliw)、[KimYang](https://github.com/KimYangOfCat)
