--- a/blog/algorithm/leetcode/35-搜索插入位置.md
+++ b/blog/algorithm/leetcode/35-搜索插入位置.md
@@ -1,11 +1,12 @@
 ---
 title: "「35.搜索插入位置」题解"
 date: 2021-04-05
-tags: [LeetCode,Algorithm]
+tags: [LeetCode, Algorithm]
 categories: [📝 算法题解]
 ---
 
-#  35. [搜索插入位置](https://leetcode-cn.com/problems/search-insert-position/)
+# 35. [搜索插入位置](https://leetcode-cn.com/problems/search-insert-position/)
+
 ## 题目描述
 
 给定一个排序数组和一个目标值，在数组中找到目标值，并返回其索引。如果目标值不存在于数组中，返回它将会被按顺序插入的位置。
@@ -42,8 +43,8 @@ categories: [📝 算法题解]
 
 **相关信息**：
 
-+ 难度：简单
-+ 标签：数组、二分查找
+- 难度：简单
+- 标签：数组、二分查找
 
 ## 题解
 
@@ -58,21 +59,21 @@ categories: [📝 算法题解]
 ```javascript
 //执行用时: 124 ms
 //内存消耗: 38.9 MB
-var searchInsert = function(nums, target) {
-    let out;
-  for(let i=0;i<nums.length;i++){
-        if(nums[i]>=target){
-            out=i;
-            break;
-        }
+var searchInsert = function (nums, target) {
+  let out;
+  for (let i = 0; i < nums.length; i++) {
+    if (nums[i] >= target) {
+      out = i;
+      break;
+    }
     //是否插到末尾
-        if(i==nums.length-1){
-            out=nums.length;
-        }
+    if (i == nums.length - 1) {
+      out = nums.length;
+    }
     /*执行用时比较长就是因为在循环中对每个元素都进行了末尾的判断，
     其实完全可以将其放在循环之后，以此减少每次循环的执行时间*/
-    }
-    return out;
+  }
+  return out;
 };
 ```
 
@@ -83,19 +84,19 @@ var searchInsert = function(nums, target) {
 */
 //这个版本的代码是效率最高的，后面几个版本的代码优化的写法，
 //但是效率没有这个版本高，可能leetcode的测试也是有误差的吧
-var searchInsert = function(nums, target) {
-    let out=-1;
-  for(let i=0;i<nums.length;i++){
-        if(nums[i]>=target){
-            out=i;
-            break;
-        }
+var searchInsert = function (nums, target) {
+  let out = -1;
+  for (let i = 0; i < nums.length; i++) {
+    if (nums[i] >= target) {
+      out = i;
+      break;
     }
-    //考虑插到末尾的情况
-        if(out==-1){
-            return nums.length;
-        }
-    return out;
+  }
+  //考虑插到末尾的情况
+  if (out == -1) {
+    return nums.length;
+  }
+  return out;
 };
 ```
 
@@ -105,14 +106,14 @@ var searchInsert = function(nums, target) {
 内存消耗: 39.1 MB
 */
 //这个版本少用了一个变量，按理说内存消耗应该减少才对，玄学
-var searchInsert = function(nums, target) {
-  for(let i=0;i<nums.length;i++){
-        if(nums[i]>=target){
-            return i;
-        }
+var searchInsert = function (nums, target) {
+  for (let i = 0; i < nums.length; i++) {
+    if (nums[i] >= target) {
+      return i;
     }
-    //考虑插到末尾的情况
-    return nums.length;
+  }
+  //考虑插到末尾的情况
+  return nums.length;
 };
 ```
 
@@ -123,12 +124,12 @@ var searchInsert = function(nums, target) {
 */
 //这个写法是最精简的，绝妙之处在于将判断条件和循环条件融合在了一起，
 //其实上边的for循环也可以这样做，这样就不必使用break语句了
-var searchInsert = function(nums, target) {
-  let i=0;
-  while(i<nums.length&&nums[i]<target){
-      i++;
+var searchInsert = function (nums, target) {
+  let i = 0;
+  while (i < nums.length && nums[i] < target) {
+    i++;
   }
-  return i
+  return i;
 };
 ```
 
@@ -136,7 +137,7 @@ var searchInsert = function(nums, target) {
 
 注意题目提供的是一个有序数组，所以应该想到使用二分法。
 
-> 二分查找也称折半查找（Binary Search），它是一种效率较高的查找方法。但是，折半查找要求线性表必须采用[顺序存储结构](https://baike.baidu.com/item/顺序存储结构/1347176)，而且表中元素按关键字有序排列。它的基本思想是：（这里假设数组元素呈升序排列）将n个元素分成个数大致相同的两半，取a[n/2]与欲查找的x作比较，如果x=a[n/2]则找到x，算法终止；如 果x < a[n/2]，则我们只要在[数组](https://baike.baidu.com/item/数组)a的左半部继续搜索x；如果x > a[n/2]，则我们只要在数组a的右 半部继续搜索x。
+> 二分查找也称折半查找（Binary Search），它是一种效率较高的查找方法。但是，折半查找要求线性表必须采用[顺序存储结构](https://baike.baidu.com/item/顺序存储结构/1347176)，而且表中元素按关键字有序排列。它的基本思想是：（这里假设数组元素呈升序排列）将 n 个元素分成个数大致相同的两半，取 a[n/2]与欲查找的 x 作比较，如果 x=a[n/2]则找到 x，算法终止；如 果 x < a[n/2]，则我们只要在[数组](https://baike.baidu.com/item/数组)a 的左半部继续搜索 x；如果 x > a[n/2]，则我们只要在数组 a 的右 半部继续搜索 x。
 
 二分查找可以有循环和递归两种实现方法。
 
@@ -148,20 +149,20 @@ var searchInsert = function(nums, target) {
 内存消耗: 38.9 MB
 */
 //循环
-var searchInsert = function(nums, target) {
- let right=0;
- let left=nums.length-1;
- while(right<=left){
-     let middle =(right+left)>>>1//使用位运算取整
-     if(nums[middle]===target){
-         return middle;
-     }else if(target>nums[middle]){
-         right=middle+1
-     }else{
-         left=middle-1
-     }
- }
- return right;// 退出循环时 hi比lo小1
+var searchInsert = function (nums, target) {
+  let right = 0;
+  let left = nums.length - 1;
+  while (right <= left) {
+    let middle = (right + left) >>> 1; //使用位运算取整
+    if (nums[middle] === target) {
+      return middle;
+    } else if (target > nums[middle]) {
+      right = middle + 1;
+    } else {
+      left = middle - 1;
+    }
+  }
+  return right; // 退出循环时 hi比lo小1
 };
 ```
 
@@ -170,24 +171,24 @@ var searchInsert = function(nums, target) {
 执行用时: 72 ms
 内存消耗: 38.8 MB
 */
-var searchInsert = function(nums, target) {
- let right=0;
- let left=nums.length-1;
+var searchInsert = function (nums, target) {
+  let right = 0;
+  let left = nums.length - 1;
   //可将插入数组头部和尾部的情况单独处理，以此来提升程序执行用时。
- if(target > nums[left]) return left+1
- else if(target < nums[0]) return 0
-    
- while(right<=left){
-     let middle =(right+left)>>>1
-     if(nums[middle]===target){
-         return middle;
-     }else if(target>nums[middle]){
-         right=middle+1
-     }else{
-         left=middle-1
-     }
- }
- return right;// 退出循环时 hi比lo小1
+  if (target > nums[left]) return left + 1;
+  else if (target < nums[0]) return 0;
+
+  while (right <= left) {
+    let middle = (right + left) >>> 1;
+    if (nums[middle] === target) {
+      return middle;
+    } else if (target > nums[middle]) {
+      right = middle + 1;
+    } else {
+      left = middle - 1;
+    }
+  }
+  return right; // 退出循环时 hi比lo小1
 };
 ```
 
@@ -198,25 +199,26 @@ var searchInsert = function(nums, target) {
 */
 //递归，递归需要建立递归调用栈，所以一般比循环的用时和内存消耗都多
 var searchInsert = function (nums, target) {
-    let left = 0;
-    let right = nums.length - 1;
-    return binarySearch(left, right, nums, target)
+  let left = 0;
+  let right = nums.length - 1;
+  return binarySearch(left, right, nums, target);
 };
 
 function binarySearch(left, right, nums, target) {
-    if (left > right) {
-        return left;
-    }
-    let mid = parseInt((left + right) / 2);
-    if (target === nums[mid]) {
-        return mid;
-    } else if (target > nums[mid]) {
-        return binarySearch(mid + 1, right, nums, target)
-    } else {
-        return binarySearch(left, mid - 1, nums, target)
-    }
+  if (left > right) {
+    return left;
+  }
+  let mid = parseInt((left + right) / 2);
+  if (target === nums[mid]) {
+    return mid;
+  } else if (target > nums[mid]) {
+    return binarySearch(mid + 1, right, nums, target);
+  } else {
+    return binarySearch(left, mid - 1, nums, target);
+  }
 }
 ```
+
 ## 全部代码
 
 <RecoDemo :collapse="true">
