--- a/blog/algorithm/leetcode/690-员工的重要性.md
+++ b/blog/algorithm/leetcode/690-员工的重要性.md
@@ -1,18 +1,22 @@
 ---
 title: "「690. 员工的重要性」题解"
 date: 2021-05-01
-tags: [LeetCode,Algorithm]
+tags: [LeetCode, Algorithm]
 categories: [📝 算法题解]
 ---
+
 # [690. 员工的重要性](https://leetcode-cn.com/problems/employee-importance/)
+
 ## 题目描述
 
 给定一个保存员工信息的数据结构，它包含了员工 **唯一的 id** ，**重要度** 和 **直系下属的 id** 。
 
-比如，员工 1 是员工 2 的领导，员工 2 是员工 3 的领导。他们相应的重要度为 15 , 10 , 5 。那么员工 1 的数据结构是 [1, 15, [2]] ，员工 2的 数据结构是 [2, 10, [3]] ，员工 3 的数据结构是 [3, 5, []] 。注意虽然员工 3 也是员工 1 的一个下属，但是由于 **并不是直系** 下属，因此没有体现在员工 1 的数据结构中。
+比如，员工 1 是员工 2 的领导，员工 2 是员工 3 的领导。他们相应的重要度为 15 , 10 , 5 。那么员工 1 的数据结构是 [1, 15, [2]] ，员工 2 的 数据结构是 [2, 10, [3]] ，员工 3 的数据结构是 [3, 5, []] 。注意虽然员工 3 也是员工 1 的一个下属，但是由于 **并不是直系** 下属，因此没有体现在员工 1 的数据结构中。
 
 现在输入一个公司的所有员工信息，以及单个员工 id ，返回这个员工和他所有下属的重要度之和。
+
 <!-- more -->
+
 **示例：**
 
 ```
@@ -29,14 +33,14 @@ categories: [📝 算法题解]
 
 **相关信息**：
 
-+ 难度：简单
-+ 标签：深度优先搜索、广度优先搜索、哈希表
+- 难度：简单
+- 标签：深度优先搜索、广度优先搜索、哈希表
 
 ## 题解
 
 这道题目是五一劳动节当天 LeetCode 的打卡题目，只能说 LeetCode 选题太契合节日，哈哈。题目很清晰的描述了一个树形的数据结构，每个员工至多有一个直系领导，可以有零个或若干个直系下属，所以员工之间的领导和下属关系就构成了树形结构。题目要求计算给定员工及其下属的重要性之和，即要求遍历以给定员工为根的子树并计算所有节点值的和。那么这道题目就转化为了树的遍历问题，其解决方案无非是深度优先搜索或者广度优先搜索。
 
-只是示例有些迷惑性，容易导致考虑不周。在示例中，列举的员工 ID 与数组的下标值正好是加1的关系，所以误导了我，没有考虑去保存员工 ID 值。示例数据转换出来的数据对象，大致如下：
+只是示例有些迷惑性，容易导致考虑不周。在示例中，列举的员工 ID 与数组的下标值正好是加 1 的关系，所以误导了我，没有考虑去保存员工 ID 值。示例数据转换出来的数据对象，大致如下：
 
 ```javascript
 const employees = [
@@ -64,24 +68,23 @@ const employees = [
 
 ```javascript
 //源码来自：https://leetcode-cn.com/problems/employee-importance/solution/yuan-gong-de-zhong-yao-xing-by-leetcode-h6xre/
-var GetImportance = function(employees, id) {
-    const map = new Map();
-    for (const employee of employees) {
-        map.set(employee.id, employee);//利用 Map 以 id 为键保存每个员工信息，方便后面查找时快速获取员工信息。
+var GetImportance = function (employees, id) {
+  const map = new Map();
+  for (const employee of employees) {
+    map.set(employee.id, employee); //利用 Map 以 id 为键保存每个员工信息，方便后面查找时快速获取员工信息。
+  }
+  const dfs = (id) => {
+    const employee = map.get(id); //获取当前员工信息
+    let total = employee.importance; //获取当前员工重要性
+    const subordinates = employee.subordinates; //获取当前员工的下属数组
+    for (const subId of subordinates) {
+      //遍历每个下属，并通过递归累计重要性之和
+      total += dfs(subId);
     }
-    const dfs = (id) => {
-        const employee = map.get(id);//获取当前员工信息
-        let total = employee.importance;//获取当前员工重要性
-        const subordinates = employee.subordinates;//获取当前员工的下属数组
-        for (const subId of subordinates) {
-          //遍历每个下属，并通过递归累计重要性之和
-            total += dfs(subId);
-        }
-        return total;
-        
-    }
+    return total;
+  };
 
-    return dfs(id);
+  return dfs(id);
 };
 ```
 
@@ -93,17 +96,19 @@ var GetImportance = function (employees, id) {
   var importance = 0;
   var computeImportance = function (id) {
     for (var i = 0; i < employees.length; i++) {
-      if (employees[i].id === id) {//查找对应id的员工信息
-        importance += employees[i].importance;//累计
-        if (employees[i].subordinates.length > 0) {//有下属
+      if (employees[i].id === id) {
+        //查找对应id的员工信息
+        importance += employees[i].importance; //累计
+        if (employees[i].subordinates.length > 0) {
+          //有下属
           for (var j = 0; j < employees[i].subordinates.length; j++) {
-            computeImportance(employees[i].subordinates[j])//递归循环
+            computeImportance(employees[i].subordinates[j]); //递归循环
           }
         }
       }
     }
-  }
-  computeImportance(id)
+  };
+  computeImportance(id);
   return importance;
 };
 ```
@@ -112,28 +117,28 @@ var GetImportance = function (employees, id) {
 
 ### 方法二：广度优先搜索
 
-广度优先就是在上面深度优先的基础上加了一个队列来保存应该立即计算的员工id，前面深度优先找到一个员工id，立刻递归调用计算。但是广度优先就是找到了一个员工 id，先不着急递归调用，而是将其保存到一个队列中，每次从队头取出一个 id 值，执行递归调用。
+广度优先就是在上面深度优先的基础上加了一个队列来保存应该立即计算的员工 id，前面深度优先找到一个员工 id，立刻递归调用计算。但是广度优先就是找到了一个员工 id，先不着急递归调用，而是将其保存到一个队列中，每次从队头取出一个 id 值，执行递归调用。
 
 ```javascript
 //原代码来自：https://leetcode-cn.com/problems/employee-importance/solution/yuan-gong-de-zhong-yao-xing-by-leetcode-h6xre/
-var GetImportance = function(employees, id) {
-    const map = new Map();
-    for (const employee of employees) {
-        map.set(employee.id, employee);
+var GetImportance = function (employees, id) {
+  const map = new Map();
+  for (const employee of employees) {
+    map.set(employee.id, employee);
+  }
+  let total = 0;
+  const queue = []; //待处理队列
+  queue.push(id);
+  while (queue.length) {
+    const curId = queue.shift();
+    const employee = map.get(curId);
+    total += employee.importance;
+    const subordinates = employee.subordinates;
+    for (const subId of subordinates) {
+      queue.push(subId); //保存下属 id
     }
-    let total = 0;
-    const queue = [];//待处理队列
-    queue.push(id);
-    while (queue.length) {
-        const curId = queue.shift();
-        const employee = map.get(curId);
-        total += employee.importance;
-        const subordinates = employee.subordinates;
-        for (const subId of subordinates) {
-            queue.push(subId);//保存下属 id
-        }
-    }
-    return total;
+  }
+  return total;
 };
 ```
 
@@ -145,9 +150,9 @@ var GetImportance = function(employees, id) {
 
 ### 参考：
 
-+ [JavaScript 深度优先搜索（DFS）+广度优先搜索（BFS）](https://leetcode-cn.com/problems/employee-importance/solution/javascript-shen-du-you-xian-sou-suo-dfsyan-du-you-/)
-+ [员工的重要性](https://leetcode-cn.com/problems/employee-importance/solution/yuan-gong-de-zhong-yao-xing-by-leetcode-h6xre/)
-+ [循环 + 递归](https://leetcode-cn.com/problems/employee-importance/solution/xun-huan-di-gui-by-siwen19/)
+- [JavaScript 深度优先搜索（DFS）+广度优先搜索（BFS）](https://leetcode-cn.com/problems/employee-importance/solution/javascript-shen-du-you-xian-sou-suo-dfsyan-du-you-/)
+- [员工的重要性](https://leetcode-cn.com/problems/employee-importance/solution/yuan-gong-de-zhong-yao-xing-by-leetcode-h6xre/)
+- [循环 + 递归](https://leetcode-cn.com/problems/employee-importance/solution/xun-huan-di-gui-by-siwen19/)
 
 ## 全部代码
 
