--- a/blog/articles/13-408.md
+++ b/blog/articles/13-408.md
@@ -2,13 +2,13 @@
 title: "将考研 408 专业课复习过程开源是什么体验？"
 date: 2020-09-10
 draft: false
-tags: [408,考研]
+tags: [408, 考研]
 categories: [📗 学习笔记]
 ---
 
 如题，在复习计算机考研 408 专业课的过程中，我将产出的代码，笔记以及思维导图等做成了一个开源项目。本项目建立至今一月有余，期间也获得了许多研友的 Stars ⭐️ 支持，非常感谢。这也是我第一次独立建立一个开源项目，建立过程中的体验很奇妙，值得书写一篇文章记录一下。下面先给出项目地址：
 
-🚀 GitHub地址：[https://github.com/KimYangOfCat/CSPostgraduate-408-2021](https://github.com/KimYangOfCat/CSPostgraduate-408-2021)，欢迎各位大佬 Stars 🌟 ～ <!-- more -->
+🚀 GitHub 地址：[https://github.com/KimYangOfCat/CSPostgraduate-408-2021](https://github.com/KimYangOfCat/CSPostgraduate-408-2021)，欢迎各位大佬 Stars 🌟 ～ <!-- more -->
 
 长文提示：本文只是单纯记录整个开源过程中的个人感受，以及简单对项目相关内容及技术进行简要介绍，并无太多技术相关细节嗷~
 
@@ -16,7 +16,7 @@ categories: [📗 学习笔记]
 
 考研是一个孤独的奋斗过程，但好在有许多研友一起砥砺前行。但由于传统的学习方式产出的笔记等资源都存储在书本 💾 等存储介质上，无法很好滴与他人分享交流。且书本等存储介质 💾 本身的诸多特性造成了它信息的易失性，所以许多同学能找到各大考研机构出版的学习资料，但很少能找到前人在学习过程中产出的总结着许多经验和坑的笔记本，因为它们或多或少都因为现实世界的原因没能传承下去。当然，利用 ipad 等设备书写的电子笔记一定程度上解决这些问题。 而我总觉得这些方式都不够酷，那么如何才能体现一名向往成为极客的计算机考研狗的酷呢？
 
-当然是将自己的学习过程总结发布到 “全球最大的同性交友网站”——GitHub，然后静等下一次[微软将它搬到北极存储](https://archiveprogram.github.com/)起来（上次没赶上，有点儿亏😜），然后等千年以后的考研人看着前人流下的血和泪 （虽然也不知道，千年以后的人还考不考研？🤪 ）好吧，皮了一下，但是 GitHub 确实十分强大，对于文本资料来说，它不仅能提供储存，还能在线预览，甚至还能自定义 web 预览方式。只要你足够了解 GitHub 生态，分享访问，协作修改之类的都是十分方便强大的。总之，在我看来，这方面是比百度网盘之类的更合适。
+当然是将自己的学习过程总结发布到 “全球最大的同性交友网站”——GitHub，然后静等下一次[微软将它搬到北极存储](https://archiveprogram.github.com/)起来（上次没赶上，有点儿亏 😜），然后等千年以后的考研人看着前人流下的血和泪 （虽然也不知道，千年以后的人还考不考研？🤪 ）好吧，皮了一下，但是 GitHub 确实十分强大，对于文本资料来说，它不仅能提供储存，还能在线预览，甚至还能自定义 web 预览方式。只要你足够了解 GitHub 生态，分享访问，协作修改之类的都是十分方便强大的。总之，在我看来，这方面是比百度网盘之类的更合适。
 
 其次，也是为了记录自己的学习漏洞，帮助自己快速成长～
 
@@ -24,13 +24,13 @@ categories: [📗 学习笔记]
 
 ### 项目资源
 
-目前项目主要收录了六种类型的资源：数据结构的代码、各科的学习笔记、思维导图、历年真题、辅导书籍PDF以及视频教程配套PPT等，其中前三者均为我个人学习过程中的产物，后面三者来源于网络（若侵权可联系删除）。
+目前项目主要收录了六种类型的资源：数据结构的代码、各科的学习笔记、思维导图、历年真题、辅导书籍 PDF 以及视频教程配套 PPT 等，其中前三者均为我个人学习过程中的产物，后面三者来源于网络（若侵权可联系删除）。
 
 所有项目资源都放在 GitHub 上，考虑到国内网络环境，在最开始项目体量较小时，我利用脚本将项目同步到了国内码云平台上。但随着项目更新发展，收容的资源越来越多，导致项目体量超过了码云单仓库体量上限，故最后放弃了同步！！
 
 所以最终只能考虑使用百毒网盘来解决部分同学的网络问题，不定期将项目手动打包至百毒网盘中，供大家自行下载～
 
-> 链接: [https://pan.baidu.com/s/1pa2kQHhsvp9XaJSCS1v-xA](https://pan.baidu.com/s/1pa2kQHhsvp9XaJSCS1v-xA) 提取码: hdqb 
+> 链接: [https://pan.baidu.com/s/1pa2kQHhsvp9XaJSCS1v-xA](https://pan.baidu.com/s/1pa2kQHhsvp9XaJSCS1v-xA) 提取码: hdqb
 >
 > 若网盘链接失效，可在 issues 中提醒作者更新嗷～
 
@@ -53,14 +53,14 @@ categories: [📗 学习笔记]
 
 但是后来又发现了问题，单纯**以内容标题**的命名方式会导致文件排序杂乱不堪，不利于排序，故而给定了命名格式：`科目_章节_序号_内容标题 `。其中，科目的取值范围为：
 
-+ `DS` ：DataStructure 的缩写，代表数据结构
-+ `CN`：ComputerNetwork 的缩写，代表计算机网络
-+ `CO`：ComputerOrganization 的缩写，代表计算机组成原理
-+ `OS`：OperatingSystem 的缩写，代表操作系统
+- `DS` ：DataStructure 的缩写，代表数据结构
+- `CN`：ComputerNetwork 的缩写，代表计算机网络
+- `CO`：ComputerOrganization 的缩写，代表计算机组成原理
+- `OS`：OperatingSystem 的缩写，代表操作系统
 
 同时，所有的章节、序号均是从 0 开始计数，毕竟这才符合程序员数数的风格，嘿嘿 😃
 
-总结，这一部分看着其实没有什么技术含量，但其实每一次修改结构都是一次痛苦的经历，每一次都得手工将所有文件名修改为符合新的定义的文件名。这样的痛苦经历就类似于 windows 电脑整理变红的C盘空间的，想想那个时候的你有多无助，当初修改文件结构的我就有多奈。当然我也可以选择不修改文件结构，但是这就会给使用项目资源的大家造成更多的困扰，既然总是会给人带来麻烦，那么麻烦我一个人，幸福各位研友，岂不美哉？那么最后我总结的结论就是，想要维护一个开源项目一定要将项目结构提前规划好，保证干净明了，这样既方便使用的同学，也方便项目的更新维护，这样的项目才能得到更多人的喜爱。
+总结，这一部分看着其实没有什么技术含量，但其实每一次修改结构都是一次痛苦的经历，每一次都得手工将所有文件名修改为符合新的定义的文件名。这样的痛苦经历就类似于 windows 电脑整理变红的 C 盘空间的，想想那个时候的你有多无助，当初修改文件结构的我就有多奈。当然我也可以选择不修改文件结构，但是这就会给使用项目资源的大家造成更多的困扰，既然总是会给人带来麻烦，那么麻烦我一个人，幸福各位研友，岂不美哉？那么最后我总结的结论就是，想要维护一个开源项目一定要将项目结构提前规划好，保证干净明了，这样既方便使用的同学，也方便项目的更新维护，这样的项目才能得到更多人的喜爱。
 
 ### 笔记博客
 
@@ -82,7 +82,7 @@ categories: [📗 学习笔记]
 
 ### Logo 设计
 
-既然博客都搭建起来了，没有自己的 Logo，似乎有点儿不美。所以作为美工小白的我尝试自己动手设计了一个 Logo ，主要依据 408这3个数字为主体进行意像化处理。其中，中间的小帆船形状类似于数字 4 ，最外边的大圆圈 ⭕️ 当然就代表数字 0 了，帆船下面就是一个躺着的数字 8 啦，它代表的也是一片汪洋大海。那么整个 LOGO表达的寓意就是：“学海无涯苦作舟”，“直挂云帆济沧海”，愿诸君与我共勉～
+既然博客都搭建起来了，没有自己的 Logo，似乎有点儿不美。所以作为美工小白的我尝试自己动手设计了一个 Logo ，主要依据 408 这 3 个数字为主体进行意像化处理。其中，中间的小帆船形状类似于数字 4 ，最外边的大圆圈 ⭕️ 当然就代表数字 0 了，帆船下面就是一个躺着的数字 8 啦，它代表的也是一片汪洋大海。那么整个 LOGO 表达的寓意就是：“学海无涯苦作舟”，“直挂云帆济沧海”，愿诸君与我共勉～
 
 <div align="center"><img src="https://cdn.jsdelivr.net/gh/KimYangOfCat/CSPostgraduate-408-2021/408Notes/.vuepress/public/icons@2x.png"></div>
 
