--- a/blog/articles/45-使用人工智能-机器学习构建文章推荐引擎.md
+++ b/blog/articles/45-使用人工智能-机器学习构建文章推荐引擎.md
@@ -15,6 +15,7 @@ publish: true
 列举一个简单的解决方案，一个平台可以实现一个基于标签的推荐引擎 —— 比如你阅读了一篇「商业」文章，它还会推荐给你五篇标记为「商业」的相关文章。然而，构建推荐引擎的更好方法是使用**相似性搜索和机器学习算法**。
 
 在本文中，我们将构建一个 Python Flask 应用程序，该应用程序会使用 [Pinecone](https://www.pinecone.io/)（一个相似性搜索的服务）来创建我们自己的文章推荐引擎。
+
 <!-- more -->
 
 ## 演示应用程序概览
@@ -164,17 +165,17 @@ app.run()
 
 在第 1 至 14 行，我们引入应用程序的依赖。我们的应用程序依赖以下的包：
 
-* `dotenv` 用于从 `.env` 文件中读取环境变量
-* `flask` 用于设置 Web 应用程序
-* `json` 用于处理 JSON
-* `os` 也用于获取环境变量
-* `pandas` 用于处理数据集
-* `pinecone` 用于使用 Pinecone SDK
-* `re` 用于处理正则表达式（RegEx）
-* `requests` 用于发送 API 请求以下载我们的数据集
-* `statistics` 提供了一些方便的统计函数
-* `sentence_transformers` 用于我们的嵌入模型
-* `swifter` 用于处理 `pandas` 的 `DataFrame`
+- `dotenv` 用于从 `.env` 文件中读取环境变量
+- `flask` 用于设置 Web 应用程序
+- `json` 用于处理 JSON
+- `os` 也用于获取环境变量
+- `pandas` 用于处理数据集
+- `pinecone` 用于使用 Pinecone SDK
+- `re` 用于处理正则表达式（RegEx）
+- `requests` 用于发送 API 请求以下载我们的数据集
+- `statistics` 提供了一些方便的统计函数
+- `sentence_transformers` 用于我们的嵌入模型
+- `swifter` 用于处理 `pandas` 的 `DataFrame`
 
 在第 16 行，我们提供了一些模板代码来告诉 Flask 我们应用程序的名称。
 
@@ -225,9 +226,10 @@ app.run()
 相似性搜索有助于为你的用户提供更好的建议。而 Pinecone，作为一个相似性搜索的服务方，可使你能轻松地向用户提供推荐，以便您可以专注于自己最擅长的事情 —— 构建一个充满值得阅读的内容的优质平台。
 
 ---
- * 原文地址：[Build an Article Recommendation Engine With AI/ML](https://betterprogramming.pub/build-an-article-recommendation-engine-with-ai-ml-c6e931e34d3b)
- * 原文作者：[Tyler Hawkins](https://medium.com/@thawkin3)
- * 译文出自：[掘金翻译计划](https://github.com/xitu/gold-miner)
- * 本文永久链接：[https://github.com/xitu/gold-miner/blob/master/article/2021/build-an-article-recommendation-engine-with-ai-ml.md](https://github.com/xitu/gold-miner/blob/master/article/2021/build-an-article-recommendation-engine-with-ai-ml.md)
- * 译者：[jaredliw](https://github.com/jaredliw)
- * 校对者：[greycodee](https://github.com/greycodee)、[KimYangOfCat](https://github.com/KimYangOfCat)
+
+- 原文地址：[Build an Article Recommendation Engine With AI/ML](https://betterprogramming.pub/build-an-article-recommendation-engine-with-ai-ml-c6e931e34d3b)
+- 原文作者：[Tyler Hawkins](https://medium.com/@thawkin3)
+- 译文出自：[掘金翻译计划](https://github.com/xitu/gold-miner)
+- 本文永久链接：[https://github.com/xitu/gold-miner/blob/master/article/2021/build-an-article-recommendation-engine-with-ai-ml.md](https://github.com/xitu/gold-miner/blob/master/article/2021/build-an-article-recommendation-engine-with-ai-ml.md)
+- 译者：[jaredliw](https://github.com/jaredliw)
+- 校对者：[greycodee](https://github.com/greycodee)、[KimYangOfCat](https://github.com/KimYangOfCat)
