--- a/blog/onlygithub/7-网络问题一次解决.md
+++ b/blog/onlygithub/7-网络问题一次解决.md
@@ -1,9 +1,10 @@
 ---
 title: "网络问题一次解决！(GitHub,Google)"
 date: 2020-01-16
-tags: [Google,"Only GitHub"]
+tags: [Google, "Only GitHub"]
 categories: [🔑 奇妙技巧]
 ---
+
 过年回家一趟，才知道家里的网络是有多么的垃圾～各种网站被墙，即使拥有小飞机也解决不了任何问题，毕竟家里的网速也是硬伤，时常会因为各种网络时延长丢包！！于是乎，我就踏上了这寻找各种网络问题解决办法的旅途，其中一些有好的解决办法便搬运一下，以借朋友参考～<!-- more -->
 
 # GitHub 网络连接失败
@@ -12,13 +13,13 @@ categories: [🔑 奇妙技巧]
 
 ![各种网络报错](https://picbed.kimyang.cn/202109050823960.jpeg)
 
-不仅仅是在游览器中如此，在终端中运行 wget 和 curl 亦是如此。。。甚至git push 一段代码都会被卡～
+不仅仅是在游览器中如此，在终端中运行 wget 和 curl 亦是如此。。。甚至 git push 一段代码都会被卡～
 
 ## 游览器下载网络代理的解决方法
 
 这是最基本的问题，解决方法很多，此处就不再赘述！（买飞机厂服务或自己搭建服务也都是可以的）这个问题解决了，你才有可能尝试下面的一些方法。
 
-如果你已经确定自己有了小飞机，但是网络下载依旧失败，首先检查自己是否开启了小飞机服务，然后检查网络代理模式，若是PAC模式，可以尝试切换到全局模式后再次尝试～毕竟PAC代理规则也难免抽风！
+如果你已经确定自己有了小飞机，但是网络下载依旧失败，首先检查自己是否开启了小飞机服务，然后检查网络代理模式，若是 PAC 模式，可以尝试切换到全局模式后再次尝试～毕竟 PAC 代理规则也难免抽风！
 
 ## git push 失败的解决方案
 
@@ -36,7 +37,7 @@ categories: [🔑 奇妙技巧]
 
 `git config --global https.proxy "127.0.0.1:1086"`
 
-至此，git 的网络代理设置完成，仅需两个命令！为确保一定走代理路线，建议将小飞机的代理模式开为全局模式。PAC模式可能会因为代理规则未包括GitHub而导致 git push 失败！
+至此，git 的网络代理设置完成，仅需两个命令！为确保一定走代理路线，建议将小飞机的代理模式开为全局模式。PAC 模式可能会因为代理规则未包括 GitHub 而导致 git push 失败！
 
 ![全局模式](https://imgconvert.csdnimg.cn/aHR0cHM6Ly90dmExLnNpbmFpbWcuY24vbGFyZ2UvMDA4Mnp5YnBneTFnYnplOGJ6a2JhajMwNzQwZGFnbTIuanBn?x-oss-process=image/format,png)
 
@@ -62,7 +63,7 @@ categories: [🔑 奇妙技巧]
 
 2.  长期使用：
 
-    将代理配置直接写入Shell配置文件中`.bashrc`或者`.zshrc`	，这个办法的好处是把代理服务器永久保存了，下次也可以直接用了。
+    将代理配置直接写入 Shell 配置文件中`.bashrc`或者`.zshrc` ，这个办法的好处是把代理服务器永久保存了，下次也可以直接用了。
 
     直接在`.bashrc`或者`.zshrc`中添加以下内容：
 
@@ -74,7 +75,7 @@ categories: [🔑 奇妙技巧]
     `source ~/.bashrc`
 
 3.  利用 proxychains 在终端使用 socks5 代理
-    这个博主写得较为详细，推荐[《利用 proxychains 在终端使用 socks5 代理》]([https://blog.fazero.me/2015/08/31/%E5%88%A9%E7%94%A8proxychains%E5%9C%A8%E7%BB%88%E7%AB%AF%E4%BD%BF%E7%94%A8socks5%E4%BB%A3%E7%90%86/](https://blog.fazero.me/2015/08/31/利用proxychains在终端使用socks5代理/))
+    这个博主写得较为详细，推荐[《利用 proxychains 在终端使用 socks5 代理》](<[https://blog.fazero.me/2015/08/31/%E5%88%A9%E7%94%A8proxychains%E5%9C%A8%E7%BB%88%E7%AB%AF%E4%BD%BF%E7%94%A8socks5%E4%BB%A3%E7%90%86/](https://blog.fazero.me/2015/08/31/利用proxychains在终端使用socks5代理/)>)
 
 **提示：终端开启网络代理是有一定的安全风险的**
 
@@ -82,7 +83,7 @@ categories: [🔑 奇妙技巧]
 
 今日，我尝试使用了一段时间的 W0indows PC, 下载 Chrome 游览器之后，竟然遇到了账号无法登陆和同步的问题！即使我开启了小飞机，设置了全局模式，亦然！！！！
 
-经过一顿搜索后，尝试成功的方法中最简单的便是 [Chrome 同步助手](https://chrome.google.com/webstore/category/extensions?hl=zh-CN)，在Google 网上商店下载成功后，使用其默认的代理路线就能帮助你登陆和同步账号～
+经过一顿搜索后，尝试成功的方法中最简单的便是 [Chrome 同步助手](https://chrome.google.com/webstore/category/extensions?hl=zh-CN)，在 Google 网上商店下载成功后，使用其默认的代理路线就能帮助你登陆和同步账号～
 
 ![Chrome同步助手](https://imgconvert.csdnimg.cn/aHR0cHM6Ly90dmExLnNpbmFpbWcuY24vbGFyZ2UvMDA4Mnp5YnBneTFnYnplOGN6NGF5ajMwOWEwNXlhYTUuanBn?x-oss-process=image/format,png)
 
